Adding documentation for FeedbackSensor class

--- a/search/all_67.html
+++ b/search/all_67.html
@@ -99,13 +99,22 @@
 </div>
 <div class="SRResult" id="SR_getvalues">
  <div class="SREntry">
-  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="../classSensor.html#af7399742268d1ecc53a2fe0dcd2fd325" target="_parent">GetValues</a>
-  <span class="SRScope">Sensor</span>
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_getvalues')">GetValues</a>
+  <div class="SRChildren">
+    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classFeedbackSensor.html#ae2ca9b734bf72a418d1143d5952b85f9" target="_parent">FeedbackSensor::GetValues()</a>
+    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classSensor.html#af7399742268d1ecc53a2fe0dcd2fd325" target="_parent">Sensor::GetValues()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_good">
+ <div class="SREntry">
+  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="../classFeedbackSensor.html#a0913aff55236e2624f28617d92dddfb8ab1a1ef95b70aa995e8d8c14c2e6fd2fe" target="_parent">GOOD</a>
+  <span class="SRScope">FeedbackSensor</span>
  </div>
 </div>
 <div class="SRResult" id="SR_gtest_5ftest_5f">
  <div class="SREntry">
-  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="../DummyUnitTest_8cc.html#af70e080549c4bffafb3c4f18695d224a" target="_parent">GTEST_TEST_</a>
+  <a id="Item16" onkeydown="return searchResults.Nav(event,16)" onkeypress="return searchResults.Nav(event,16)" onkeyup="return searchResults.Nav(event,16)" class="SRSymbol" href="../DummyUnitTest_8cc.html#af70e080549c4bffafb3c4f18695d224a" target="_parent">GTEST_TEST_</a>
   <span class="SRScope">DummyUnitTest.cc</span>
  </div>
 </div>
