--- a/search/all_73.html
+++ b/search/all_73.html
@@ -110,8 +110,11 @@
 </div>
 <div class="SRResult" id="SR_setvalues">
  <div class="SREntry">
-  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">SetValues</a>
-  <span class="SRScope">Sensor</span>
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setvalues')">SetValues</a>
+  <div class="SRChildren">
+    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classFeedbackSensor.html#ab75e30fbdd11cbb67c9f84757b0f6504" target="_parent">FeedbackSensor::SetValues()</a>
+    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">Sensor::SetValues()</a>
+  </div>
  </div>
 </div>
 <div class="SRResult" id="SR_standardqlearner">
