--- a/search/functions_67.html
+++ b/search/functions_67.html
@@ -99,8 +99,11 @@
 </div>
 <div class="SRResult" id="SR_getvalues">
  <div class="SREntry">
-  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="../classSensor.html#af7399742268d1ecc53a2fe0dcd2fd325" target="_parent">GetValues</a>
-  <span class="SRScope">Sensor</span>
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_getvalues')">GetValues</a>
+  <div class="SRChildren">
+    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classFeedbackSensor.html#ae2ca9b734bf72a418d1143d5952b85f9" target="_parent">FeedbackSensor::GetValues()</a>
+    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classSensor.html#af7399742268d1ecc53a2fe0dcd2fd325" target="_parent">Sensor::GetValues()</a>
+  </div>
  </div>
 </div>
 <div class="SRResult" id="SR_gtest_5ftest_5f">
