--- a/Sensor_8h_source.html
+++ b/Sensor_8h_source.html
@@ -84,44 +84,42 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 </div>
 <div class="contents">
 <a href="Sensor_8h.html">Go to the documentation of this file.</a><div class="fragment"><pre class="fragment"><a name="l00001"></a>00001 
-<a name="l00011"></a>00011 <span class="preprocessor">#ifndef _SHL_PRIMITIVES_LEARNER_SENSOR_H_</span>
-<a name="l00012"></a>00012 <span class="preprocessor"></span><span class="preprocessor">#define _SHL_PRIMITIVES_LEARNER_SENSOR_H_</span>
+<a name="l00011"></a>00011 <span class="preprocessor">#ifndef _SHL_PRIMITIVES_STUDENT_SENSOR_H_</span>
+<a name="l00012"></a>00012 <span class="preprocessor"></span><span class="preprocessor">#define _SHL_PRIMITIVES_STUDENT_SENSOR_H_</span>
 <a name="l00013"></a>00013 <span class="preprocessor"></span>
 <a name="l00014"></a>00014 <span class="preprocessor">#include &lt;vector&gt;</span>
 <a name="l00015"></a>00015 
 <a name="l00016"></a><a class="code" href="classSensor.html">00016</a> <span class="keyword">class </span><a class="code" href="classSensor.html">Sensor</a> {
 <a name="l00017"></a>00017  <span class="keyword">public</span>:
-<a name="l00018"></a><a class="code" href="classSensor.html#aa730e9961dd645e9df9644c52b6e72eb">00018</a>   <span class="keyword">virtual</span> <a class="code" href="classSensor.html#aa730e9961dd645e9df9644c52b6e72eb">~Sensor</a>() {}
-<a name="l00019"></a>00019 
-<a name="l00027"></a>00027   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classSensor.html#a15c12c5cf1ff7088c5524190ed355f29">SetValues</a>(<span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> values, <span class="keywordtype">int</span> num_values) = 0;
-<a name="l00028"></a>00028 
-<a name="l00034"></a>00034   <span class="keyword">virtual</span> <span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> <a class="code" href="classSensor.html#af7399742268d1ecc53a2fe0dcd2fd325">GetValues</a>() = 0;
-<a name="l00035"></a>00035 
-<a name="l00041"></a><a class="code" href="classSensor.html#ae3a2aa886134492f9a706f73b663db3c">00041</a>   <span class="keyword">virtual</span> <span class="keywordtype">int</span> <span class="keyword">const</span> <a class="code" href="classSensor.html#ae3a2aa886134492f9a706f73b663db3c">get_num_values</a>() { <span class="keywordflow">return</span> num_values_; }
-<a name="l00042"></a>00042 
-<a name="l00048"></a><a class="code" href="classSensor.html#adc934a1432f20ecc18077f54f3f41a0d">00048</a>   <span class="keyword">virtual</span> <span class="keywordtype">char</span> <span class="keyword">const</span> * <span class="keyword">const</span> <a class="code" href="classSensor.html#adc934a1432f20ecc18077f54f3f41a0d">get_name</a>() { <span class="keywordflow">return</span> name_; }
-<a name="l00049"></a>00049 
-<a name="l00050"></a>00050  <span class="keyword">protected</span>:
-<a name="l00056"></a>00056   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classSensor.html#a200f6c8a969080811fd28ebe61d0306e">poll</a>() = 0;
-<a name="l00057"></a>00057 
-<a name="l00058"></a>00058  <span class="keyword">private</span>:
-<a name="l00059"></a>00059   <a class="code" href="classSensor.html">Sensor</a>() {}
+<a name="l00021"></a><a class="code" href="classSensor.html#aa730e9961dd645e9df9644c52b6e72eb">00021</a>   <span class="keyword">virtual</span> <a class="code" href="classSensor.html#aa730e9961dd645e9df9644c52b6e72eb">~Sensor</a>() {}
+<a name="l00022"></a>00022 
+<a name="l00030"></a>00030   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classSensor.html#a15c12c5cf1ff7088c5524190ed355f29">SetValues</a>(<span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> values, <span class="keywordtype">int</span> num_values) = 0;
+<a name="l00031"></a>00031 
+<a name="l00037"></a>00037   <span class="keyword">virtual</span> <span class="keywordtype">double</span> <span class="keyword">const</span> * <span class="keyword">const</span> <a class="code" href="classSensor.html#af7399742268d1ecc53a2fe0dcd2fd325">GetValues</a>() = 0;
+<a name="l00038"></a>00038 
+<a name="l00044"></a><a class="code" href="classSensor.html#ae3a2aa886134492f9a706f73b663db3c">00044</a>   <span class="keyword">virtual</span> <span class="keywordtype">int</span> <span class="keyword">const</span> <a class="code" href="classSensor.html#ae3a2aa886134492f9a706f73b663db3c">get_num_values</a>() { <span class="keywordflow">return</span> num_values_; }
+<a name="l00045"></a>00045 
+<a name="l00051"></a><a class="code" href="classSensor.html#adc934a1432f20ecc18077f54f3f41a0d">00051</a>   <span class="keyword">virtual</span> <span class="keywordtype">char</span> <span class="keyword">const</span> * <span class="keyword">const</span> <a class="code" href="classSensor.html#adc934a1432f20ecc18077f54f3f41a0d">get_name</a>() { <span class="keywordflow">return</span> name_; }
+<a name="l00052"></a>00052 
+<a name="l00053"></a>00053  <span class="keyword">protected</span>:
+<a name="l00059"></a>00059   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classSensor.html#af0d2b8b236cb252ef0ced0b037a46676">Poll</a>() = 0;
 <a name="l00060"></a>00060 
-<a name="l00064"></a>00064   <span class="keywordtype">char</span> *name_;
-<a name="l00065"></a>00065 
-<a name="l00069"></a>00069   <span class="keywordtype">double</span> *values_;
+<a name="l00061"></a>00061  <span class="keyword">private</span>:
+<a name="l00069"></a>00069   <span class="keywordtype">char</span> <span class="keyword">const</span> * name_;
 <a name="l00070"></a>00070 
-<a name="l00074"></a>00074   <span class="keywordtype">int</span> num_values_;
+<a name="l00074"></a>00074   <span class="keywordtype">double</span> *values_;
 <a name="l00075"></a>00075 
-<a name="l00079"></a>00079   <span class="keywordtype">double</span> max_value_;
+<a name="l00079"></a>00079   <span class="keywordtype">int</span> num_values_;
 <a name="l00080"></a>00080 
-<a name="l00084"></a>00084   <span class="keywordtype">double</span> min_value_;
+<a name="l00084"></a>00084   <span class="keywordtype">double</span> max_value_;
 <a name="l00085"></a>00085 
-<a name="l00089"></a>00089   <span class="keywordtype">int</span> significant_figures_;
+<a name="l00089"></a>00089   <span class="keywordtype">double</span> min_value_;
 <a name="l00090"></a>00090 
-<a name="l00094"></a>00094   <span class="keywordtype">double</span> nearby_threshold_;
-<a name="l00095"></a>00095 };
-<a name="l00096"></a>00096 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_LEARNER_SENSOR_H_</span>
+<a name="l00094"></a>00094   <span class="keywordtype">int</span> significant_figures_;
+<a name="l00095"></a>00095 
+<a name="l00099"></a>00099   <span class="keywordtype">double</span> nearby_threshold_;
+<a name="l00100"></a>00100 };
+<a name="l00101"></a>00101 <span class="preprocessor">#endif  // _SHL_PRIMITIVES_STUDENT_SENSOR_H_</span>
 </pre></div></div>
 </div>
   <div id="nav-path" class="navpath">
