--- a/search/all_64.html
+++ b/search/all_64.html
@@ -19,43 +19,49 @@
   <span class="SRScope">Utils</span>
  </div>
 </div>
+<div class="SRResult" id="SR_done">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classFeedbackSensor.html#a0913aff55236e2624f28617d92dddfb8aa8554164f5dbf0805dcb95018b008b2c" target="_parent">DONE</a>
+  <span class="SRScope">FeedbackSensor</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_dummy">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummy')">Dummy</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummy')">Dummy</a>
   <div class="SRChildren">
-    <a id="Item2_c0" onkeydown="return searchResults.NavChild(event,2,0)" onkeypress="return searchResults.NavChild(event,2,0)" onkeyup="return searchResults.NavChild(event,2,0)" class="SRScope" href="../classDummy.html" target="_parent">Dummy</a>
-    <a id="Item2_c1" onkeydown="return searchResults.NavChild(event,2,1)" onkeypress="return searchResults.NavChild(event,2,1)" onkeyup="return searchResults.NavChild(event,2,1)" class="SRScope" href="../classDummy.html#afe03b8568b4af57481b092f8356ca041" target="_parent">Dummy::Dummy()</a>
+    <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../classDummy.html" target="_parent">Dummy</a>
+    <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../classDummy.html#afe03b8568b4af57481b092f8356ca041" target="_parent">Dummy::Dummy()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_dummy_2ecc">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../Dummy_8cc.html" target="_parent">Dummy.cc</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../Dummy_8cc.html" target="_parent">Dummy.cc</a>
  </div>
 </div>
 <div class="SRResult" id="SR_dummy_2eh">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../Dummy_8h.html" target="_parent">Dummy.h</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../Dummy_8h.html" target="_parent">Dummy.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_dummy_5f">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classDummyTest.html#a58dd7791336127f300e1b9f0c8be5331" target="_parent">dummy_</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classDummyTest.html#a58dd7791336127f300e1b9f0c8be5331" target="_parent">dummy_</a>
   <span class="SRScope">DummyTest</span>
  </div>
 </div>
 <div class="SRResult" id="SR_dummytest">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummytest')">DummyTest</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummytest')">DummyTest</a>
   <div class="SRChildren">
-    <a id="Item6_c0" onkeydown="return searchResults.NavChild(event,6,0)" onkeypress="return searchResults.NavChild(event,6,0)" onkeyup="return searchResults.NavChild(event,6,0)" class="SRScope" href="../classDummyTest.html" target="_parent">DummyTest</a>
-    <a id="Item6_c1" onkeydown="return searchResults.NavChild(event,6,1)" onkeypress="return searchResults.NavChild(event,6,1)" onkeyup="return searchResults.NavChild(event,6,1)" class="SRScope" href="../classDummyTest.html#a4462df485e63df52fce081770ec41b04" target="_parent">DummyTest::DummyTest()</a>
+    <a id="Item7_c0" onkeydown="return searchResults.NavChild(event,7,0)" onkeypress="return searchResults.NavChild(event,7,0)" onkeyup="return searchResults.NavChild(event,7,0)" class="SRScope" href="../classDummyTest.html" target="_parent">DummyTest</a>
+    <a id="Item7_c1" onkeydown="return searchResults.NavChild(event,7,1)" onkeypress="return searchResults.NavChild(event,7,1)" onkeyup="return searchResults.NavChild(event,7,1)" class="SRScope" href="../classDummyTest.html#a4462df485e63df52fce081770ec41b04" target="_parent">DummyTest::DummyTest()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_dummyunittest_2ecc">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
