--- a/search/all_66.html
+++ b/search/all_66.html
@@ -13,6 +13,25 @@
   <span class="SRScope">Utils.h</span>
  </div>
 </div>
+<div class="SRResult" id="SR_feedbacksensor">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_feedbacksensor')">FeedbackSensor</a>
+  <div class="SRChildren">
+    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classFeedbackSensor.html" target="_parent">FeedbackSensor</a>
+    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classFeedbackSensor.html#ac6df1b0ad03fdb1709784780d44f9207" target="_parent">FeedbackSensor::FeedbackSensor()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_feedbacksensor_2ecc">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../FeedbackSensor_8cc.html" target="_parent">FeedbackSensor.cc</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_feedbacksensor_2eh">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../FeedbackSensor_8h.html" target="_parent">FeedbackSensor.h</a>
+ </div>
+</div>
 <div class="SRStatus" id="Searching">Searching...</div>
 <div class="SRStatus" id="NoMatches">No Matches</div>
 <script type="text/javascript"><!--
