--- a/search/all_6c.html
+++ b/search/all_6c.html
@@ -42,46 +42,52 @@
   <span class="SRScope">Utils.h</span>
  </div>
 </div>
+<div class="SRResult" id="SR_listenonsocket">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classFeedbackSensor.html#af365f251e46136c5a04c4990b62043f4" target="_parent">ListenOnSocket</a>
+  <span class="SRScope">FeedbackSensor</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_load">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_load')">Load</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_load')">Load</a>
   <div class="SRChildren">
-    <a id="Item5_c0" onkeydown="return searchResults.NavChild(event,5,0)" onkeypress="return searchResults.NavChild(event,5,0)" onkeyup="return searchResults.NavChild(event,5,0)" class="SRScope" href="../classQLearner.html#a0d0f1fbbf83f73fb3a6b42c43055aa48" target="_parent">QLearner::Load()</a>
-    <a id="Item5_c1" onkeydown="return searchResults.NavChild(event,5,1)" onkeypress="return searchResults.NavChild(event,5,1)" onkeyup="return searchResults.NavChild(event,5,1)" class="SRScope" href="../classStandardQLearner.html#a2651149a3445c00d9c286625bfa3b163" target="_parent">StandardQLearner::Load()</a>
+    <a id="Item6_c0" onkeydown="return searchResults.NavChild(event,6,0)" onkeypress="return searchResults.NavChild(event,6,0)" onkeyup="return searchResults.NavChild(event,6,0)" class="SRScope" href="../classQLearner.html#a0d0f1fbbf83f73fb3a6b42c43055aa48" target="_parent">QLearner::Load()</a>
+    <a id="Item6_c1" onkeydown="return searchResults.NavChild(event,6,1)" onkeypress="return searchResults.NavChild(event,6,1)" onkeyup="return searchResults.NavChild(event,6,1)" class="SRScope" href="../classStandardQLearner.html#a2651149a3445c00d9c286625bfa3b163" target="_parent">StandardQLearner::Load()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_loadcomparables">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_loadcomparables')">LoadComparables</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_loadcomparables')">LoadComparables</a>
   <div class="SRChildren">
-    <a id="Item6_c0" onkeydown="return searchResults.NavChild(event,6,0)" onkeypress="return searchResults.NavChild(event,6,0)" onkeyup="return searchResults.NavChild(event,6,0)" class="SRScope" href="../classDummy.html#a10da33fbb0a100568a1834ee74e25386" target="_parent">Dummy::LoadComparables()</a>
-    <a id="Item6_c1" onkeydown="return searchResults.NavChild(event,6,1)" onkeypress="return searchResults.NavChild(event,6,1)" onkeyup="return searchResults.NavChild(event,6,1)" class="SRScope" href="../classStudent.html#a0cbadf44af4e8321c124ff83fea069e2" target="_parent">Student::LoadComparables()</a>
+    <a id="Item7_c0" onkeydown="return searchResults.NavChild(event,7,0)" onkeypress="return searchResults.NavChild(event,7,0)" onkeyup="return searchResults.NavChild(event,7,0)" class="SRScope" href="../classDummy.html#a10da33fbb0a100568a1834ee74e25386" target="_parent">Dummy::LoadComparables()</a>
+    <a id="Item7_c1" onkeydown="return searchResults.NavChild(event,7,1)" onkeypress="return searchResults.NavChild(event,7,1)" onkeyup="return searchResults.NavChild(event,7,1)" class="SRScope" href="../classStudent.html#a0cbadf44af4e8321c124ff83fea069e2" target="_parent">Student::LoadComparables()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_log">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_log')">Log</a>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_log')">Log</a>
   <div class="SRChildren">
-    <a id="Item7_c0" onkeydown="return searchResults.NavChild(event,7,0)" onkeypress="return searchResults.NavChild(event,7,0)" onkeyup="return searchResults.NavChild(event,7,0)" class="SRScope" href="../namespaceUtils.html#ac859c14784f69cfb1d933f869fb715af" target="_parent">Utils::Log(Level level, const char *format,...)</a>
-    <a id="Item7_c1" onkeydown="return searchResults.NavChild(event,7,1)" onkeypress="return searchResults.NavChild(event,7,1)" onkeyup="return searchResults.NavChild(event,7,1)" class="SRScope" href="../namespaceUtils.html#aeb0a89ea616e1745be8e6b65ca7e4111" target="_parent">Utils::Log(FILE *filedes, Level level, const char *format,...)</a>
-    <a id="Item7_c2" onkeydown="return searchResults.NavChild(event,7,2)" onkeypress="return searchResults.NavChild(event,7,2)" onkeyup="return searchResults.NavChild(event,7,2)" class="SRScope" href="../namespaceUtils.html#aed23b95921a2718dec495f66a3b2352c" target="_parent">Utils::Log(string const &amp;filename, Level level, const char *format,...)</a>
+    <a id="Item8_c0" onkeydown="return searchResults.NavChild(event,8,0)" onkeypress="return searchResults.NavChild(event,8,0)" onkeyup="return searchResults.NavChild(event,8,0)" class="SRScope" href="../namespaceUtils.html#ac859c14784f69cfb1d933f869fb715af" target="_parent">Utils::Log(Level level, const char *format,...)</a>
+    <a id="Item8_c1" onkeydown="return searchResults.NavChild(event,8,1)" onkeypress="return searchResults.NavChild(event,8,1)" onkeyup="return searchResults.NavChild(event,8,1)" class="SRScope" href="../namespaceUtils.html#aeb0a89ea616e1745be8e6b65ca7e4111" target="_parent">Utils::Log(FILE *filedes, Level level, const char *format,...)</a>
+    <a id="Item8_c2" onkeydown="return searchResults.NavChild(event,8,2)" onkeypress="return searchResults.NavChild(event,8,2)" onkeyup="return searchResults.NavChild(event,8,2)" class="SRScope" href="../namespaceUtils.html#aed23b95921a2718dec495f66a3b2352c" target="_parent">Utils::Log(string const &amp;filename, Level level, const char *format,...)</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_logdir">
  <div class="SREntry">
-  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_logdir')">LOGDIR</a>
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_logdir')">LOGDIR</a>
   <div class="SRChildren">
-    <a id="Item8_c0" onkeydown="return searchResults.NavChild(event,8,0)" onkeypress="return searchResults.NavChild(event,8,0)" onkeyup="return searchResults.NavChild(event,8,0)" class="SRScope" href="../Utils_8h.html#a512470fd0a69a93011b0484b74ec3390" target="_parent">LOGDIR():&#160;Utils.h</a>
-    <a id="Item8_c1" onkeydown="return searchResults.NavChild(event,8,1)" onkeypress="return searchResults.NavChild(event,8,1)" onkeyup="return searchResults.NavChild(event,8,1)" class="SRScope" href="../UtilsUnitTest_8cc.html#a512470fd0a69a93011b0484b74ec3390" target="_parent">LOGDIR():&#160;UtilsUnitTest.cc</a>
+    <a id="Item9_c0" onkeydown="return searchResults.NavChild(event,9,0)" onkeypress="return searchResults.NavChild(event,9,0)" onkeyup="return searchResults.NavChild(event,9,0)" class="SRScope" href="../Utils_8h.html#a512470fd0a69a93011b0484b74ec3390" target="_parent">LOGDIR():&#160;Utils.h</a>
+    <a id="Item9_c1" onkeydown="return searchResults.NavChild(event,9,1)" onkeypress="return searchResults.NavChild(event,9,1)" onkeyup="return searchResults.NavChild(event,9,1)" class="SRScope" href="../UtilsUnitTest_8cc.html#a512470fd0a69a93011b0484b74ec3390" target="_parent">LOGDIR():&#160;UtilsUnitTest.cc</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_logfile">
  <div class="SREntry">
-  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../Utils_8h.html#a6d3fef197146b932f5ad01fce683a66b" target="_parent">LOGFILE</a>
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../Utils_8h.html#a6d3fef197146b932f5ad01fce683a66b" target="_parent">LOGFILE</a>
   <span class="SRScope">Utils.h</span>
  </div>
 </div>
