--- a/search/all_70.html
+++ b/search/all_70.html
@@ -7,24 +7,39 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR_panic">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classFeedbackSensor.html#a0913aff55236e2624f28617d92dddfb8ade29e7e0782405c30feba1ddb38a88d9" target="_parent">PANIC</a>
+  <span class="SRScope">FeedbackSensor</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_parsefromfile">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_parsefromfile')">ParseFromFile</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_parsefromfile')">ParseFromFile</a>
   <div class="SRChildren">
-    <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../namespaceUtils.html#a00a11c91604f263dcb00df3c9b915692" target="_parent">Utils::ParseFromFile(FILE *filedes, bool should_close=false)</a>
-    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../namespaceUtils.html#afdd1d103e9feac170bfcb52fd24a6e26" target="_parent">Utils::ParseFromFile(string const &amp;filename)</a>
+    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../namespaceUtils.html#a00a11c91604f263dcb00df3c9b915692" target="_parent">Utils::ParseFromFile(FILE *filedes, bool should_close=false)</a>
+    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../namespaceUtils.html#afdd1d103e9feac170bfcb52fd24a6e26" target="_parent">Utils::ParseFromFile(string const &amp;filename)</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_poll">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classSensor.html#a200f6c8a969080811fd28ebe61d0306e" target="_parent">poll</a>
-  <span class="SRScope">Sensor</span>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_poll')">Poll</a>
+  <div class="SRChildren">
+    <a id="Item2_c0" onkeydown="return searchResults.NavChild(event,2,0)" onkeypress="return searchResults.NavChild(event,2,0)" onkeyup="return searchResults.NavChild(event,2,0)" class="SRScope" href="../classFeedbackSensor.html#a295f60e85adda08479de45c86d6c6cd8" target="_parent">FeedbackSensor::Poll()</a>
+    <a id="Item2_c1" onkeydown="return searchResults.NavChild(event,2,1)" onkeypress="return searchResults.NavChild(event,2,1)" onkeyup="return searchResults.NavChild(event,2,1)" class="SRScope" href="../classSensor.html#af0d2b8b236cb252ef0ced0b037a46676" target="_parent">Sensor::Poll()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_pollforfeedback">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../FeedbackSensor_8h.html#a486c2bd5d0b5461a15fdd60beb732700" target="_parent">PollForFeedback</a>
+  <span class="SRScope">FeedbackSensor.h</span>
  </div>
 </div>
 <div class="SRResult" id="SR_prepended">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../Utils_8h.html#a4dccf12413d880432cf05db7f9d8ba27" target="_parent">PREPENDED</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../Utils_8h.html#a4dccf12413d880432cf05db7f9d8ba27" target="_parent">PREPENDED</a>
   <span class="SRScope">Utils.h</span>
  </div>
 </div>
