--- a/search/files_66.html
+++ b/search/files_66.html
@@ -7,16 +7,14 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
-<div class="SRResult" id="SR_debug">
+<div class="SRResult" id="SR_feedbacksensor_2ecc">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../Utils_8h.html#a221b779e6bb7b8d40677d7642bfefac5a0593585da9181e972974c1274d8f2b4f" target="_parent">DEBUG</a>
-  <span class="SRScope">Utils.h</span>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../FeedbackSensor_8cc.html" target="_parent">FeedbackSensor.cc</a>
  </div>
 </div>
-<div class="SRResult" id="SR_done">
+<div class="SRResult" id="SR_feedbacksensor_2eh">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classFeedbackSensor.html#a0913aff55236e2624f28617d92dddfb8aa8554164f5dbf0805dcb95018b008b2c" target="_parent">DONE</a>
-  <span class="SRScope">FeedbackSensor</span>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../FeedbackSensor_8h.html" target="_parent">FeedbackSensor.h</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
