--- a/search/functions_6c.html
+++ b/search/functions_6c.html
@@ -18,31 +18,37 @@
   </div>
  </div>
 </div>
+<div class="SRResult" id="SR_listenonsocket">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classFeedbackSensor.html#af365f251e46136c5a04c4990b62043f4" target="_parent">ListenOnSocket</a>
+  <span class="SRScope">FeedbackSensor</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_load">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_load')">Load</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_load')">Load</a>
   <div class="SRChildren">
-    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classQLearner.html#a0d0f1fbbf83f73fb3a6b42c43055aa48" target="_parent">QLearner::Load()</a>
-    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classStandardQLearner.html#a2651149a3445c00d9c286625bfa3b163" target="_parent">StandardQLearner::Load()</a>
+    <a id="Item2_c0" onkeydown="return searchResults.NavChild(event,2,0)" onkeypress="return searchResults.NavChild(event,2,0)" onkeyup="return searchResults.NavChild(event,2,0)" class="SRScope" href="../classQLearner.html#a0d0f1fbbf83f73fb3a6b42c43055aa48" target="_parent">QLearner::Load()</a>
+    <a id="Item2_c1" onkeydown="return searchResults.NavChild(event,2,1)" onkeypress="return searchResults.NavChild(event,2,1)" onkeyup="return searchResults.NavChild(event,2,1)" class="SRScope" href="../classStandardQLearner.html#a2651149a3445c00d9c286625bfa3b163" target="_parent">StandardQLearner::Load()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_loadcomparables">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_loadcomparables')">LoadComparables</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_loadcomparables')">LoadComparables</a>
   <div class="SRChildren">
-    <a id="Item2_c0" onkeydown="return searchResults.NavChild(event,2,0)" onkeypress="return searchResults.NavChild(event,2,0)" onkeyup="return searchResults.NavChild(event,2,0)" class="SRScope" href="../classDummy.html#a10da33fbb0a100568a1834ee74e25386" target="_parent">Dummy::LoadComparables()</a>
-    <a id="Item2_c1" onkeydown="return searchResults.NavChild(event,2,1)" onkeypress="return searchResults.NavChild(event,2,1)" onkeyup="return searchResults.NavChild(event,2,1)" class="SRScope" href="../classStudent.html#a0cbadf44af4e8321c124ff83fea069e2" target="_parent">Student::LoadComparables()</a>
+    <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../classDummy.html#a10da33fbb0a100568a1834ee74e25386" target="_parent">Dummy::LoadComparables()</a>
+    <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../classStudent.html#a0cbadf44af4e8321c124ff83fea069e2" target="_parent">Student::LoadComparables()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_log">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_log')">Log</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_log')">Log</a>
   <div class="SRChildren">
-    <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../namespaceUtils.html#ac859c14784f69cfb1d933f869fb715af" target="_parent">Utils::Log(Level level, const char *format,...)</a>
-    <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../namespaceUtils.html#aeb0a89ea616e1745be8e6b65ca7e4111" target="_parent">Utils::Log(FILE *filedes, Level level, const char *format,...)</a>
-    <a id="Item3_c2" onkeydown="return searchResults.NavChild(event,3,2)" onkeypress="return searchResults.NavChild(event,3,2)" onkeyup="return searchResults.NavChild(event,3,2)" class="SRScope" href="../namespaceUtils.html#aed23b95921a2718dec495f66a3b2352c" target="_parent">Utils::Log(string const &amp;filename, Level level, const char *format,...)</a>
+    <a id="Item4_c0" onkeydown="return searchResults.NavChild(event,4,0)" onkeypress="return searchResults.NavChild(event,4,0)" onkeyup="return searchResults.NavChild(event,4,0)" class="SRScope" href="../namespaceUtils.html#ac859c14784f69cfb1d933f869fb715af" target="_parent">Utils::Log(Level level, const char *format,...)</a>
+    <a id="Item4_c1" onkeydown="return searchResults.NavChild(event,4,1)" onkeypress="return searchResults.NavChild(event,4,1)" onkeyup="return searchResults.NavChild(event,4,1)" class="SRScope" href="../namespaceUtils.html#aeb0a89ea616e1745be8e6b65ca7e4111" target="_parent">Utils::Log(FILE *filedes, Level level, const char *format,...)</a>
+    <a id="Item4_c2" onkeydown="return searchResults.NavChild(event,4,2)" onkeypress="return searchResults.NavChild(event,4,2)" onkeyup="return searchResults.NavChild(event,4,2)" class="SRScope" href="../namespaceUtils.html#aed23b95921a2718dec495f66a3b2352c" target="_parent">Utils::Log(string const &amp;filename, Level level, const char *format,...)</a>
   </div>
  </div>
 </div>
