--- a/search/functions_73.html
+++ b/search/functions_73.html
@@ -94,8 +94,11 @@
 </div>
 <div class="SRResult" id="SR_setvalues">
  <div class="SREntry">
-  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">SetValues</a>
-  <span class="SRScope">Sensor</span>
+  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setvalues')">SetValues</a>
+  <div class="SRChildren">
+    <a id="Item11_c0" onkeydown="return searchResults.NavChild(event,11,0)" onkeypress="return searchResults.NavChild(event,11,0)" onkeyup="return searchResults.NavChild(event,11,0)" class="SRScope" href="../classFeedbackSensor.html#ab75e30fbdd11cbb67c9f84757b0f6504" target="_parent">FeedbackSensor::SetValues()</a>
+    <a id="Item11_c1" onkeydown="return searchResults.NavChild(event,11,1)" onkeypress="return searchResults.NavChild(event,11,1)" onkeyup="return searchResults.NavChild(event,11,1)" class="SRScope" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">Sensor::SetValues()</a>
+  </div>
  </div>
 </div>
 <div class="SRResult" id="SR_standardqlearner">
