--- a/search/functions_7e.html
+++ b/search/functions_7e.html
@@ -31,39 +31,45 @@
   <span class="SRScope">ExplorationType</span>
  </div>
 </div>
+<div class="SRResult" id="SR__7efeedbacksensor">
+ <div class="SREntry">
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classFeedbackSensor.html#a44f17379b62cd6d7ce8580ceee9df294" target="_parent">~FeedbackSensor</a>
+  <span class="SRScope">FeedbackSensor</span>
+ </div>
+</div>
 <div class="SRResult" id="SR__7eqlearner">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classQLearner.html#ab258e968d4d38e88472e85e87648a21f" target="_parent">~QLearner</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classQLearner.html#ab258e968d4d38e88472e85e87648a21f" target="_parent">~QLearner</a>
   <span class="SRScope">QLearner</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eqtable">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classQTable.html#ace14f566b9889061001c3cb4c7f1e128" target="_parent">~QTable</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classQTable.html#ace14f566b9889061001c3cb4c7f1e128" target="_parent">~QTable</a>
   <span class="SRScope">QTable</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7esensor">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classSensor.html#aa730e9961dd645e9df9644c52b6e72eb" target="_parent">~Sensor</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classSensor.html#aa730e9961dd645e9df9644c52b6e72eb" target="_parent">~Sensor</a>
   <span class="SRScope">Sensor</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7estate">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classState.html#a9ddc1df6f998184d6477b48fab90281c" target="_parent">~State</a>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classState.html#a9ddc1df6f998184d6477b48fab90281c" target="_parent">~State</a>
   <span class="SRScope">State</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7estudent">
  <div class="SREntry">
-  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classStudent.html#a71f6d37e021e98dff29ffe67bfac6ce1" target="_parent">~Student</a>
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classStudent.html#a71f6d37e021e98dff29ffe67bfac6ce1" target="_parent">~Student</a>
   <span class="SRScope">Student</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eutilstest">
  <div class="SREntry">
-  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classUtilsTest.html#a448cb6e9c759eb79c74d68c28424a98e" target="_parent">~UtilsTest</a>
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../classUtilsTest.html#a448cb6e9c759eb79c74d68c28424a98e" target="_parent">~UtilsTest</a>
   <span class="SRScope">UtilsTest</span>
  </div>
 </div>
