Added Observer skeleton

--- a/Student_8h_source.html
+++ b/Student_8h_source.html
@@ -105,9 +105,9 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <a name="l00035"></a>00035  <span class="keyword">public</span>:
 <a name="l00040"></a><a class="code" href="classStudent.html#a71f6d37e021e98dff29ffe67bfac6ce1">00040</a>   <span class="keyword">virtual</span> <a class="code" href="classStudent.html#a71f6d37e021e98dff29ffe67bfac6ce1">~Student</a>() {}
 <a name="l00041"></a>00041 
-<a name="l00050"></a>00050   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classStudent.html#aefd3c200778441fce353d8be8ea63ae3">SetEnvironment</a>(std::vector&lt;Sensor*&gt; <span class="keyword">const</span> &amp;sensors) = 0;
+<a name="l00050"></a>00050   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classStudent.html#ac37451ed6094b1f82392613df3a1701d">SetEnvironment</a>(vector&lt;Sensor*&gt; <span class="keyword">const</span> &amp;sensors) = 0;
 <a name="l00051"></a>00051 
-<a name="l00061"></a>00061   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classStudent.html#a5caae1409a700602cc158dc005ff9749">SetMotors</a>(std::vector&lt;Sensor*&gt; <span class="keyword">const</span> &amp;motors) = 0;
+<a name="l00061"></a>00061   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classStudent.html#a760485de5b5a6de685bd9db6c443cfc2">SetMotors</a>(vector&lt;Sensor*&gt; <span class="keyword">const</span> &amp;motors) = 0;
 <a name="l00062"></a>00062 
 <a name="l00070"></a>00070   <span class="keyword">virtual</span> <span class="keywordtype">bool</span> <a class="code" href="classStudent.html#a81aa83fa202a80a76c929530598829fe">SetFeedbackHandler</a>(<a class="code" href="classSensor.html">Sensor</a> <span class="keyword">const</span> &amp;feedback_device) = 0;
 <a name="l00071"></a>00071 
