--- a/search/classes_64.html
+++ b/search/classes_64.html
@@ -12,9 +12,29 @@
   <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classDummy.html" target="_parent">Dummy</a>
  </div>
 </div>
+<div class="SRResult" id="SR_dummyobservertest">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classDummyObserverTest.html" target="_parent">DummyObserverTest</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest_5fattemptmatch_5ftest">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classDummyObserverTest__AttemptMatch__Test.html" target="_parent">DummyObserverTest_AttemptMatch_Test</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest_5fstartandstopobserver_5ftest">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classDummyObserverTest__StartAndStopObserver__Test.html" target="_parent">DummyObserverTest_StartAndStopObserver_Test</a>
+ </div>
+</div>
 <div class="SRResult" id="SR_dummytest">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classDummyTest.html" target="_parent">DummyTest</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classDummyTest.html" target="_parent">DummyTest</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummytest_5fsetup_5fenv_5fand_5fmotors_5ftest">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classDummyTest__Setup__Env__and__motors__Test.html" target="_parent">DummyTest_Setup_Env_and_motors_Test</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
