--- a/search/variables_64.html
+++ b/search/variables_64.html
@@ -9,8 +9,11 @@
 <div class="SRStatus" id="Loading">Loading...</div>
 <div class="SRResult" id="SR_dummy_5f">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classDummyTest.html#a58dd7791336127f300e1b9f0c8be5331" target="_parent">dummy_</a>
-  <span class="SRScope">DummyTest</span>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummy_5f')">dummy_</a>
+  <div class="SRChildren">
+    <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../classDummyObserverTest.html#acccef7d8d26b9c11b3c76be805d3ed4f" target="_parent">DummyObserverTest::dummy_()</a>
+    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../classDummyTest.html#a58dd7791336127f300e1b9f0c8be5331" target="_parent">DummyTest::dummy_()</a>
+  </div>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
