--- a/search/all_64.html
+++ b/search/all_64.html
@@ -31,37 +31,92 @@
   <div class="SRChildren">
     <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../classDummy.html" target="_parent">Dummy</a>
     <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../classDummy.html#afe03b8568b4af57481b092f8356ca041" target="_parent">Dummy::Dummy()</a>
+    <a id="Item3_c2" onkeydown="return searchResults.NavChild(event,3,2)" onkeypress="return searchResults.NavChild(event,3,2)" onkeyup="return searchResults.NavChild(event,3,2)" class="SRScope" href="../classDummy.html#afe03b8568b4af57481b092f8356ca041" target="_parent">Dummy::Dummy()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_dummy_2ecc">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../Dummy_8cc.html" target="_parent">Dummy.cc</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../Primitives_2Student_2Dummy_8cc.html" target="_parent">Dummy.cc</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummy_2ecc">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../Observation_2Observer_2Dummy_8cc.html" target="_parent">Dummy.cc</a>
  </div>
 </div>
 <div class="SRResult" id="SR_dummy_2eh">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../Dummy_8h.html" target="_parent">Dummy.h</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../Observation_2Observer_2Dummy_8h.html" target="_parent">Dummy.h</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummy_2eh">
+ <div class="SREntry">
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../Primitives_2Student_2Dummy_8h.html" target="_parent">Dummy.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_dummy_5f">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classDummyTest.html#a58dd7791336127f300e1b9f0c8be5331" target="_parent">dummy_</a>
-  <span class="SRScope">DummyTest</span>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummy_5f')">dummy_</a>
+  <div class="SRChildren">
+    <a id="Item8_c0" onkeydown="return searchResults.NavChild(event,8,0)" onkeypress="return searchResults.NavChild(event,8,0)" onkeyup="return searchResults.NavChild(event,8,0)" class="SRScope" href="../classDummyObserverTest.html#acccef7d8d26b9c11b3c76be805d3ed4f" target="_parent">DummyObserverTest::dummy_()</a>
+    <a id="Item8_c1" onkeydown="return searchResults.NavChild(event,8,1)" onkeypress="return searchResults.NavChild(event,8,1)" onkeyup="return searchResults.NavChild(event,8,1)" class="SRScope" href="../classDummyTest.html#a58dd7791336127f300e1b9f0c8be5331" target="_parent">DummyTest::dummy_()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest">
+ <div class="SREntry">
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummyobservertest')">DummyObserverTest</a>
+  <div class="SRChildren">
+    <a id="Item9_c0" onkeydown="return searchResults.NavChild(event,9,0)" onkeypress="return searchResults.NavChild(event,9,0)" onkeyup="return searchResults.NavChild(event,9,0)" class="SRScope" href="../classDummyObserverTest.html" target="_parent">DummyObserverTest</a>
+    <a id="Item9_c1" onkeydown="return searchResults.NavChild(event,9,1)" onkeypress="return searchResults.NavChild(event,9,1)" onkeyup="return searchResults.NavChild(event,9,1)" class="SRScope" href="../classDummyObserverTest.html#a77d8549b036e8722baaf554db547c3fb" target="_parent">DummyObserverTest::DummyObserverTest()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest_5fattemptmatch_5ftest">
+ <div class="SREntry">
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummyobservertest_5fattemptmatch_5ftest')">DummyObserverTest_AttemptMatch_Test</a>
+  <div class="SRChildren">
+    <a id="Item10_c0" onkeydown="return searchResults.NavChild(event,10,0)" onkeypress="return searchResults.NavChild(event,10,0)" onkeyup="return searchResults.NavChild(event,10,0)" class="SRScope" href="../classDummyObserverTest__AttemptMatch__Test.html" target="_parent">DummyObserverTest_AttemptMatch_Test</a>
+    <a id="Item10_c1" onkeydown="return searchResults.NavChild(event,10,1)" onkeypress="return searchResults.NavChild(event,10,1)" onkeyup="return searchResults.NavChild(event,10,1)" class="SRScope" href="../classDummyObserverTest__AttemptMatch__Test.html#a511ced07abd492081927f4b6659aa17e" target="_parent">DummyObserverTest_AttemptMatch_Test::DummyObserverTest_AttemptMatch_Test()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest_5fstartandstopobserver_5ftest">
+ <div class="SREntry">
+  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummyobservertest_5fstartandstopobserver_5ftest')">DummyObserverTest_StartAndStopObserver_Test</a>
+  <div class="SRChildren">
+    <a id="Item11_c0" onkeydown="return searchResults.NavChild(event,11,0)" onkeypress="return searchResults.NavChild(event,11,0)" onkeyup="return searchResults.NavChild(event,11,0)" class="SRScope" href="../classDummyObserverTest__StartAndStopObserver__Test.html" target="_parent">DummyObserverTest_StartAndStopObserver_Test</a>
+    <a id="Item11_c1" onkeydown="return searchResults.NavChild(event,11,1)" onkeypress="return searchResults.NavChild(event,11,1)" onkeyup="return searchResults.NavChild(event,11,1)" class="SRScope" href="../classDummyObserverTest__StartAndStopObserver__Test.html#a58abfc06a47e456fff5a260628038b42" target="_parent">DummyObserverTest_StartAndStopObserver_Test::DummyObserverTest_StartAndStopObserver_Test()</a>
+  </div>
  </div>
 </div>
 <div class="SRResult" id="SR_dummytest">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummytest')">DummyTest</a>
+  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummytest')">DummyTest</a>
   <div class="SRChildren">
-    <a id="Item7_c0" onkeydown="return searchResults.NavChild(event,7,0)" onkeypress="return searchResults.NavChild(event,7,0)" onkeyup="return searchResults.NavChild(event,7,0)" class="SRScope" href="../classDummyTest.html" target="_parent">DummyTest</a>
-    <a id="Item7_c1" onkeydown="return searchResults.NavChild(event,7,1)" onkeypress="return searchResults.NavChild(event,7,1)" onkeyup="return searchResults.NavChild(event,7,1)" class="SRScope" href="../classDummyTest.html#a4462df485e63df52fce081770ec41b04" target="_parent">DummyTest::DummyTest()</a>
+    <a id="Item12_c0" onkeydown="return searchResults.NavChild(event,12,0)" onkeypress="return searchResults.NavChild(event,12,0)" onkeyup="return searchResults.NavChild(event,12,0)" class="SRScope" href="../classDummyTest.html" target="_parent">DummyTest</a>
+    <a id="Item12_c1" onkeydown="return searchResults.NavChild(event,12,1)" onkeypress="return searchResults.NavChild(event,12,1)" onkeyup="return searchResults.NavChild(event,12,1)" class="SRScope" href="../classDummyTest.html#a4462df485e63df52fce081770ec41b04" target="_parent">DummyTest::DummyTest()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummytest_5fsetup_5fenv_5fand_5fmotors_5ftest">
+ <div class="SREntry">
+  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummytest_5fsetup_5fenv_5fand_5fmotors_5ftest')">DummyTest_Setup_Env_and_motors_Test</a>
+  <div class="SRChildren">
+    <a id="Item13_c0" onkeydown="return searchResults.NavChild(event,13,0)" onkeypress="return searchResults.NavChild(event,13,0)" onkeyup="return searchResults.NavChild(event,13,0)" class="SRScope" href="../classDummyTest__Setup__Env__and__motors__Test.html" target="_parent">DummyTest_Setup_Env_and_motors_Test</a>
+    <a id="Item13_c1" onkeydown="return searchResults.NavChild(event,13,1)" onkeypress="return searchResults.NavChild(event,13,1)" onkeyup="return searchResults.NavChild(event,13,1)" class="SRScope" href="../classDummyTest__Setup__Env__and__motors__Test.html#acd10cd1420470273ecc12ea13e77cfbb" target="_parent">DummyTest_Setup_Env_and_motors_Test::DummyTest_Setup_Env_and_motors_Test()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_dummyunittest_2ecc">
  <div class="SREntry">
-  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="../Observation_2Observer_2DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyunittest_2ecc">
+ <div class="SREntry">
+  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="../Primitives_2Student_2DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
