--- a/search/all_6d.html
+++ b/search/all_6d.html
@@ -12,7 +12,8 @@
   <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_main')">main</a>
   <div class="SRChildren">
     <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../UtilsUnitTest_8cc.html#a0ddf1224851353fc92bfbff6f499fa97" target="_parent">main(int argc, char *argv[]):&#160;UtilsUnitTest.cc</a>
-    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../DummyUnitTest_8cc.html#a0ddf1224851353fc92bfbff6f499fa97" target="_parent">main(int argc, char *argv[]):&#160;DummyUnitTest.cc</a>
+    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../Observation_2Observer_2DummyUnitTest_8cc.html#a0ddf1224851353fc92bfbff6f499fa97" target="_parent">main(int argc, char *argv[]):&#160;DummyUnitTest.cc</a>
+    <a id="Item0_c2" onkeydown="return searchResults.NavChild(event,0,2)" onkeypress="return searchResults.NavChild(event,0,2)" onkeyup="return searchResults.NavChild(event,0,2)" class="SRScope" href="../Primitives_2Student_2DummyUnitTest_8cc.html#a0ddf1224851353fc92bfbff6f499fa97" target="_parent">main(int argc, char *argv[]):&#160;DummyUnitTest.cc</a>
   </div>
  </div>
 </div>
