--- a/search/all_73.html
+++ b/search/all_73.html
@@ -65,7 +65,7 @@
   <div class="SRChildren">
     <a id="Item8_c0" onkeydown="return searchResults.NavChild(event,8,0)" onkeypress="return searchResults.NavChild(event,8,0)" onkeyup="return searchResults.NavChild(event,8,0)" class="SRScope" href="../classQLearner.html#af6317f98919d64b7df40a7783ae4381d" target="_parent">QLearner::SetEnvironment()</a>
     <a id="Item8_c1" onkeydown="return searchResults.NavChild(event,8,1)" onkeypress="return searchResults.NavChild(event,8,1)" onkeyup="return searchResults.NavChild(event,8,1)" class="SRScope" href="../classDummy.html#a70649390dc87931dcde12b94f9d76f00" target="_parent">Dummy::SetEnvironment()</a>
-    <a id="Item8_c2" onkeydown="return searchResults.NavChild(event,8,2)" onkeypress="return searchResults.NavChild(event,8,2)" onkeyup="return searchResults.NavChild(event,8,2)" class="SRScope" href="../classStudent.html#aefd3c200778441fce353d8be8ea63ae3" target="_parent">Student::SetEnvironment()</a>
+    <a id="Item8_c2" onkeydown="return searchResults.NavChild(event,8,2)" onkeypress="return searchResults.NavChild(event,8,2)" onkeyup="return searchResults.NavChild(event,8,2)" class="SRScope" href="../classStudent.html#ac37451ed6094b1f82392613df3a1701d" target="_parent">Student::SetEnvironment()</a>
   </div>
  </div>
 </div>
@@ -98,93 +98,96 @@
   <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setmotors')">SetMotors</a>
   <div class="SRChildren">
     <a id="Item12_c0" onkeydown="return searchResults.NavChild(event,12,0)" onkeypress="return searchResults.NavChild(event,12,0)" onkeyup="return searchResults.NavChild(event,12,0)" class="SRScope" href="../classDummy.html#a391a406697d968157df7d666e8866c90" target="_parent">Dummy::SetMotors()</a>
-    <a id="Item12_c1" onkeydown="return searchResults.NavChild(event,12,1)" onkeypress="return searchResults.NavChild(event,12,1)" onkeyup="return searchResults.NavChild(event,12,1)" class="SRScope" href="../classStudent.html#a5caae1409a700602cc158dc005ff9749" target="_parent">Student::SetMotors()</a>
+    <a id="Item12_c1" onkeydown="return searchResults.NavChild(event,12,1)" onkeypress="return searchResults.NavChild(event,12,1)" onkeyup="return searchResults.NavChild(event,12,1)" class="SRScope" href="../classStudent.html#a760485de5b5a6de685bd9db6c443cfc2" target="_parent">Student::SetMotors()</a>
   </div>
- </div>
-</div>
-<div class="SRResult" id="SR_setup">
- <div class="SREntry">
-  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="../classDummyTest.html#a905ab1ac36acec508b3d9e61d109d1b9" target="_parent">SetUp</a>
-  <span class="SRScope">DummyTest</span>
  </div>
 </div>
 <div class="SRResult" id="SR_setvalues">
  <div class="SREntry">
-  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setvalues')">SetValues</a>
+  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setvalues')">SetValues</a>
   <div class="SRChildren">
-    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classFeedbackSensor.html#ab75e30fbdd11cbb67c9f84757b0f6504" target="_parent">FeedbackSensor::SetValues()</a>
-    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">Sensor::SetValues()</a>
+    <a id="Item13_c0" onkeydown="return searchResults.NavChild(event,13,0)" onkeypress="return searchResults.NavChild(event,13,0)" onkeyup="return searchResults.NavChild(event,13,0)" class="SRScope" href="../classFeedbackSensor.html#ab75e30fbdd11cbb67c9f84757b0f6504" target="_parent">FeedbackSensor::SetValues()</a>
+    <a id="Item13_c1" onkeydown="return searchResults.NavChild(event,13,1)" onkeypress="return searchResults.NavChild(event,13,1)" onkeyup="return searchResults.NavChild(event,13,1)" class="SRScope" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">Sensor::SetValues()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_standardqlearner">
  <div class="SREntry">
-  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_standardqlearner')">StandardQLearner</a>
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_standardqlearner')">StandardQLearner</a>
   <div class="SRChildren">
-    <a id="Item15_c0" onkeydown="return searchResults.NavChild(event,15,0)" onkeypress="return searchResults.NavChild(event,15,0)" onkeyup="return searchResults.NavChild(event,15,0)" class="SRScope" href="../classStandardQLearner.html" target="_parent">StandardQLearner</a>
-    <a id="Item15_c1" onkeydown="return searchResults.NavChild(event,15,1)" onkeypress="return searchResults.NavChild(event,15,1)" onkeyup="return searchResults.NavChild(event,15,1)" class="SRScope" href="../classStandardQLearner.html#a724505db52ab190e329f4426be326b22" target="_parent">StandardQLearner::StandardQLearner()</a>
+    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classStandardQLearner.html" target="_parent">StandardQLearner</a>
+    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classStandardQLearner.html#a724505db52ab190e329f4426be326b22" target="_parent">StandardQLearner::StandardQLearner()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_standardqlearner_2ecc">
  <div class="SREntry">
-  <a id="Item16" onkeydown="return searchResults.Nav(event,16)" onkeypress="return searchResults.Nav(event,16)" onkeyup="return searchResults.Nav(event,16)" class="SRSymbol" href="../StandardQLearner_8cc.html" target="_parent">StandardQLearner.cc</a>
+  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="../StandardQLearner_8cc.html" target="_parent">StandardQLearner.cc</a>
  </div>
 </div>
 <div class="SRResult" id="SR_standardqlearner_2eh">
  <div class="SREntry">
-  <a id="Item17" onkeydown="return searchResults.Nav(event,17)" onkeypress="return searchResults.Nav(event,17)" onkeyup="return searchResults.Nav(event,17)" class="SRSymbol" href="../StandardQLearner_8h.html" target="_parent">StandardQLearner.h</a>
+  <a id="Item16" onkeydown="return searchResults.Nav(event,16)" onkeypress="return searchResults.Nav(event,16)" onkeyup="return searchResults.Nav(event,16)" class="SRSymbol" href="../StandardQLearner_8h.html" target="_parent">StandardQLearner.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_state">
  <div class="SREntry">
-  <a id="Item18" onkeydown="return searchResults.Nav(event,18)" onkeypress="return searchResults.Nav(event,18)" onkeyup="return searchResults.Nav(event,18)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_state')">State</a>
+  <a id="Item17" onkeydown="return searchResults.Nav(event,17)" onkeypress="return searchResults.Nav(event,17)" onkeyup="return searchResults.Nav(event,17)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_state')">State</a>
   <div class="SRChildren">
-    <a id="Item18_c0" onkeydown="return searchResults.NavChild(event,18,0)" onkeypress="return searchResults.NavChild(event,18,0)" onkeyup="return searchResults.NavChild(event,18,0)" class="SRScope" href="../classState.html" target="_parent">State</a>
-    <a id="Item18_c1" onkeydown="return searchResults.NavChild(event,18,1)" onkeypress="return searchResults.NavChild(event,18,1)" onkeyup="return searchResults.NavChild(event,18,1)" class="SRScope" href="../classState.html#a1af59ce9dafd747e818c4767e9bd7ee6" target="_parent">State::State(const std::vector&lt; double &gt; &amp;state_descriptor, const double reward=0.)</a>
-    <a id="Item18_c2" onkeydown="return searchResults.NavChild(event,18,2)" onkeypress="return searchResults.NavChild(event,18,2)" onkeyup="return searchResults.NavChild(event,18,2)" class="SRScope" href="../classState.html#a50c1474e5b23bafd0300ba5a302c9474" target="_parent">State::State(State const &amp;s)</a>
-    <a id="Item18_c3" onkeydown="return searchResults.NavChild(event,18,3)" onkeypress="return searchResults.NavChild(event,18,3)" onkeyup="return searchResults.NavChild(event,18,3)" class="SRScope" href="../classState.html#ab91bb1dd5aa6260ab2a456581daf9ec2" target="_parent">State::State()</a>
+    <a id="Item17_c0" onkeydown="return searchResults.NavChild(event,17,0)" onkeypress="return searchResults.NavChild(event,17,0)" onkeyup="return searchResults.NavChild(event,17,0)" class="SRScope" href="../classState.html" target="_parent">State</a>
+    <a id="Item17_c1" onkeydown="return searchResults.NavChild(event,17,1)" onkeypress="return searchResults.NavChild(event,17,1)" onkeyup="return searchResults.NavChild(event,17,1)" class="SRScope" href="../classState.html#a1af59ce9dafd747e818c4767e9bd7ee6" target="_parent">State::State(const std::vector&lt; double &gt; &amp;state_descriptor, const double reward=0.)</a>
+    <a id="Item17_c2" onkeydown="return searchResults.NavChild(event,17,2)" onkeypress="return searchResults.NavChild(event,17,2)" onkeyup="return searchResults.NavChild(event,17,2)" class="SRScope" href="../classState.html#a50c1474e5b23bafd0300ba5a302c9474" target="_parent">State::State(State const &amp;s)</a>
+    <a id="Item17_c3" onkeydown="return searchResults.NavChild(event,17,3)" onkeypress="return searchResults.NavChild(event,17,3)" onkeyup="return searchResults.NavChild(event,17,3)" class="SRScope" href="../classState.html#ab91bb1dd5aa6260ab2a456581daf9ec2" target="_parent">State::State()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_state_2eh">
  <div class="SREntry">
-  <a id="Item19" onkeydown="return searchResults.Nav(event,19)" onkeypress="return searchResults.Nav(event,19)" onkeyup="return searchResults.Nav(event,19)" class="SRSymbol" href="../State_8h.html" target="_parent">State.h</a>
+  <a id="Item18" onkeydown="return searchResults.Nav(event,18)" onkeypress="return searchResults.Nav(event,18)" onkeyup="return searchResults.Nav(event,18)" class="SRSymbol" href="../State_8h.html" target="_parent">State.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_state_5f">
  <div class="SREntry">
-  <a id="Item20" onkeydown="return searchResults.Nav(event,20)" onkeypress="return searchResults.Nav(event,20)" onkeyup="return searchResults.Nav(event,20)" class="SRSymbol" href="../classStateHistoryTuple.html#aed942f89116b7628a8c3fb51f97f2582" target="_parent">state_</a>
+  <a id="Item19" onkeydown="return searchResults.Nav(event,19)" onkeypress="return searchResults.Nav(event,19)" onkeyup="return searchResults.Nav(event,19)" class="SRSymbol" href="../classStateHistoryTuple.html#aed942f89116b7628a8c3fb51f97f2582" target="_parent">state_</a>
   <span class="SRScope">StateHistoryTuple</span>
  </div>
 </div>
 <div class="SRResult" id="SR_state_5fhistory_5f">
  <div class="SREntry">
-  <a id="Item21" onkeydown="return searchResults.Nav(event,21)" onkeypress="return searchResults.Nav(event,21)" onkeyup="return searchResults.Nav(event,21)" class="SRSymbol" href="../classQLearner.html#ae93718a8e6495e663cb07471418c5754" target="_parent">state_history_</a>
+  <a id="Item20" onkeydown="return searchResults.Nav(event,20)" onkeypress="return searchResults.Nav(event,20)" onkeyup="return searchResults.Nav(event,20)" class="SRSymbol" href="../classQLearner.html#ae93718a8e6495e663cb07471418c5754" target="_parent">state_history_</a>
   <span class="SRScope">QLearner</span>
  </div>
 </div>
 <div class="SRResult" id="SR_statehistorytuple">
  <div class="SREntry">
-  <a id="Item22" onkeydown="return searchResults.Nav(event,22)" onkeypress="return searchResults.Nav(event,22)" onkeyup="return searchResults.Nav(event,22)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_statehistorytuple')">StateHistoryTuple</a>
+  <a id="Item21" onkeydown="return searchResults.Nav(event,21)" onkeypress="return searchResults.Nav(event,21)" onkeyup="return searchResults.Nav(event,21)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_statehistorytuple')">StateHistoryTuple</a>
   <div class="SRChildren">
-    <a id="Item22_c0" onkeydown="return searchResults.NavChild(event,22,0)" onkeypress="return searchResults.NavChild(event,22,0)" onkeyup="return searchResults.NavChild(event,22,0)" class="SRScope" href="../classStateHistoryTuple.html" target="_parent">StateHistoryTuple</a>
-    <a id="Item22_c1" onkeydown="return searchResults.NavChild(event,22,1)" onkeypress="return searchResults.NavChild(event,22,1)" onkeyup="return searchResults.NavChild(event,22,1)" class="SRScope" href="../classStateHistoryTuple.html#aecfc54358ab083e0c49e3322a1211459" target="_parent">StateHistoryTuple::StateHistoryTuple(State *const state, double timestamp)</a>
-    <a id="Item22_c2" onkeydown="return searchResults.NavChild(event,22,2)" onkeypress="return searchResults.NavChild(event,22,2)" onkeyup="return searchResults.NavChild(event,22,2)" class="SRScope" href="../classStateHistoryTuple.html#aab3103a676c689da3c610de5435de1d7" target="_parent">StateHistoryTuple::StateHistoryTuple(StateHistoryTuple const &amp;sht)</a>
+    <a id="Item21_c0" onkeydown="return searchResults.NavChild(event,21,0)" onkeypress="return searchResults.NavChild(event,21,0)" onkeyup="return searchResults.NavChild(event,21,0)" class="SRScope" href="../classStateHistoryTuple.html" target="_parent">StateHistoryTuple</a>
+    <a id="Item21_c1" onkeydown="return searchResults.NavChild(event,21,1)" onkeypress="return searchResults.NavChild(event,21,1)" onkeyup="return searchResults.NavChild(event,21,1)" class="SRScope" href="../classStateHistoryTuple.html#aecfc54358ab083e0c49e3322a1211459" target="_parent">StateHistoryTuple::StateHistoryTuple(State *const state, double timestamp)</a>
+    <a id="Item21_c2" onkeydown="return searchResults.NavChild(event,21,2)" onkeypress="return searchResults.NavChild(event,21,2)" onkeyup="return searchResults.NavChild(event,21,2)" class="SRScope" href="../classStateHistoryTuple.html#aab3103a676c689da3c610de5435de1d7" target="_parent">StateHistoryTuple::StateHistoryTuple(StateHistoryTuple const &amp;sht)</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_statehistorytuple_2eh">
  <div class="SREntry">
-  <a id="Item23" onkeydown="return searchResults.Nav(event,23)" onkeypress="return searchResults.Nav(event,23)" onkeyup="return searchResults.Nav(event,23)" class="SRSymbol" href="../StateHistoryTuple_8h.html" target="_parent">StateHistoryTuple.h</a>
+  <a id="Item22" onkeydown="return searchResults.Nav(event,22)" onkeypress="return searchResults.Nav(event,22)" onkeyup="return searchResults.Nav(event,22)" class="SRSymbol" href="../StateHistoryTuple_8h.html" target="_parent">StateHistoryTuple.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_stoplearning">
  <div class="SREntry">
-  <a id="Item24" onkeydown="return searchResults.Nav(event,24)" onkeypress="return searchResults.Nav(event,24)" onkeyup="return searchResults.Nav(event,24)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_stoplearning')">StopLearning</a>
+  <a id="Item23" onkeydown="return searchResults.Nav(event,23)" onkeypress="return searchResults.Nav(event,23)" onkeyup="return searchResults.Nav(event,23)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_stoplearning')">StopLearning</a>
   <div class="SRChildren">
-    <a id="Item24_c0" onkeydown="return searchResults.NavChild(event,24,0)" onkeypress="return searchResults.NavChild(event,24,0)" onkeyup="return searchResults.NavChild(event,24,0)" class="SRScope" href="../classDummy.html#aa36bcfa62e283c646d6f0e668f51980e" target="_parent">Dummy::StopLearning()</a>
-    <a id="Item24_c1" onkeydown="return searchResults.NavChild(event,24,1)" onkeypress="return searchResults.NavChild(event,24,1)" onkeyup="return searchResults.NavChild(event,24,1)" class="SRScope" href="../classStudent.html#a557d4a972d99d5bba31774c608b326f3" target="_parent">Student::StopLearning()</a>
+    <a id="Item23_c0" onkeydown="return searchResults.NavChild(event,23,0)" onkeypress="return searchResults.NavChild(event,23,0)" onkeyup="return searchResults.NavChild(event,23,0)" class="SRScope" href="../classDummy.html#aa36bcfa62e283c646d6f0e668f51980e" target="_parent">Dummy::StopLearning()</a>
+    <a id="Item23_c1" onkeydown="return searchResults.NavChild(event,23,1)" onkeypress="return searchResults.NavChild(event,23,1)" onkeyup="return searchResults.NavChild(event,23,1)" class="SRScope" href="../classStudent.html#a557d4a972d99d5bba31774c608b326f3" target="_parent">Student::StopLearning()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_stopobserving">
+ <div class="SREntry">
+  <a id="Item24" onkeydown="return searchResults.Nav(event,24)" onkeypress="return searchResults.Nav(event,24)" onkeyup="return searchResults.Nav(event,24)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_stopobserving')">StopObserving</a>
+  <div class="SRChildren">
+    <a id="Item24_c0" onkeydown="return searchResults.NavChild(event,24,0)" onkeypress="return searchResults.NavChild(event,24,0)" onkeyup="return searchResults.NavChild(event,24,0)" class="SRScope" href="../classDummy.html#a6e1d5d66fe5b4ee367f2138ebf43a10f" target="_parent">Dummy::StopObserving()</a>
+    <a id="Item24_c1" onkeydown="return searchResults.NavChild(event,24,1)" onkeypress="return searchResults.NavChild(event,24,1)" onkeyup="return searchResults.NavChild(event,24,1)" class="SRScope" href="../classObserver.html#ab08434f37add05cd6691a80573758200" target="_parent">Observer::StopObserving()</a>
   </div>
  </div>
 </div>
