--- a/search/files_64.html
+++ b/search/files_64.html
@@ -9,17 +9,32 @@
 <div class="SRStatus" id="Loading">Loading...</div>
 <div class="SRResult" id="SR_dummy_2ecc">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../Dummy_8cc.html" target="_parent">Dummy.cc</a>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../Observation_2Observer_2Dummy_8cc.html" target="_parent">Dummy.cc</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummy_2ecc">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../Primitives_2Student_2Dummy_8cc.html" target="_parent">Dummy.cc</a>
  </div>
 </div>
 <div class="SRResult" id="SR_dummy_2eh">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../Dummy_8h.html" target="_parent">Dummy.h</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../Primitives_2Student_2Dummy_8h.html" target="_parent">Dummy.h</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummy_2eh">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../Observation_2Observer_2Dummy_8h.html" target="_parent">Dummy.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_dummyunittest_2ecc">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../Primitives_2Student_2DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyunittest_2ecc">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../Observation_2Observer_2DummyUnitTest_8cc.html" target="_parent">DummyUnitTest.cc</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
