--- a/search/functions_61.html
+++ b/search/functions_61.html
@@ -28,6 +28,15 @@
   </div>
  </div>
 </div>
+<div class="SRResult" id="SR_attemptmatch">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_attemptmatch')">AttemptMatch</a>
+  <div class="SRChildren">
+    <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../classDummy.html#ae4a0a40a0306b18c9c0b8f1eb06dec70" target="_parent">Dummy::AttemptMatch()</a>
+    <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../classObserver.html#a97c173aa49010680f702b268fe656f2f" target="_parent">Observer::AttemptMatch()</a>
+  </div>
+ </div>
+</div>
 <div class="SRStatus" id="Searching">Searching...</div>
 <div class="SRStatus" id="NoMatches">No Matches</div>
 <script type="text/javascript"><!--
