--- a/search/functions_64.html
+++ b/search/functions_64.html
@@ -15,14 +15,41 @@
 </div>
 <div class="SRResult" id="SR_dummy">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classDummy.html#afe03b8568b4af57481b092f8356ca041" target="_parent">Dummy</a>
-  <span class="SRScope">Dummy</span>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_dummy')">Dummy</a>
+  <div class="SRChildren">
+    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classDummy.html#afe03b8568b4af57481b092f8356ca041" target="_parent">Dummy::Dummy()</a>
+    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classDummy.html#afe03b8568b4af57481b092f8356ca041" target="_parent">Dummy::Dummy()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classDummyObserverTest.html#a77d8549b036e8722baaf554db547c3fb" target="_parent">DummyObserverTest</a>
+  <span class="SRScope">DummyObserverTest</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest_5fattemptmatch_5ftest">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classDummyObserverTest__AttemptMatch__Test.html#a511ced07abd492081927f4b6659aa17e" target="_parent">DummyObserverTest_AttemptMatch_Test</a>
+  <span class="SRScope">DummyObserverTest_AttemptMatch_Test</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummyobservertest_5fstartandstopobserver_5ftest">
+ <div class="SREntry">
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classDummyObserverTest__StartAndStopObserver__Test.html#a58abfc06a47e456fff5a260628038b42" target="_parent">DummyObserverTest_StartAndStopObserver_Test</a>
+  <span class="SRScope">DummyObserverTest_StartAndStopObserver_Test</span>
  </div>
 </div>
 <div class="SRResult" id="SR_dummytest">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classDummyTest.html#a4462df485e63df52fce081770ec41b04" target="_parent">DummyTest</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classDummyTest.html#a4462df485e63df52fce081770ec41b04" target="_parent">DummyTest</a>
   <span class="SRScope">DummyTest</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_dummytest_5fsetup_5fenv_5fand_5fmotors_5ftest">
+ <div class="SREntry">
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classDummyTest__Setup__Env__and__motors__Test.html#acd10cd1420470273ecc12ea13e77cfbb" target="_parent">DummyTest_Setup_Env_and_motors_Test</a>
+  <span class="SRScope">DummyTest_Setup_Env_and_motors_Test</span>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
