--- a/search/functions_73.html
+++ b/search/functions_73.html
@@ -49,7 +49,7 @@
   <div class="SRChildren">
     <a id="Item5_c0" onkeydown="return searchResults.NavChild(event,5,0)" onkeypress="return searchResults.NavChild(event,5,0)" onkeyup="return searchResults.NavChild(event,5,0)" class="SRScope" href="../classQLearner.html#af6317f98919d64b7df40a7783ae4381d" target="_parent">QLearner::SetEnvironment()</a>
     <a id="Item5_c1" onkeydown="return searchResults.NavChild(event,5,1)" onkeypress="return searchResults.NavChild(event,5,1)" onkeyup="return searchResults.NavChild(event,5,1)" class="SRScope" href="../classDummy.html#a70649390dc87931dcde12b94f9d76f00" target="_parent">Dummy::SetEnvironment()</a>
-    <a id="Item5_c2" onkeydown="return searchResults.NavChild(event,5,2)" onkeypress="return searchResults.NavChild(event,5,2)" onkeyup="return searchResults.NavChild(event,5,2)" class="SRScope" href="../classStudent.html#aefd3c200778441fce353d8be8ea63ae3" target="_parent">Student::SetEnvironment()</a>
+    <a id="Item5_c2" onkeydown="return searchResults.NavChild(event,5,2)" onkeypress="return searchResults.NavChild(event,5,2)" onkeyup="return searchResults.NavChild(event,5,2)" class="SRScope" href="../classStudent.html#ac37451ed6094b1f82392613df3a1701d" target="_parent">Student::SetEnvironment()</a>
   </div>
  </div>
 </div>
@@ -82,56 +82,59 @@
   <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setmotors')">SetMotors</a>
   <div class="SRChildren">
     <a id="Item9_c0" onkeydown="return searchResults.NavChild(event,9,0)" onkeypress="return searchResults.NavChild(event,9,0)" onkeyup="return searchResults.NavChild(event,9,0)" class="SRScope" href="../classDummy.html#a391a406697d968157df7d666e8866c90" target="_parent">Dummy::SetMotors()</a>
-    <a id="Item9_c1" onkeydown="return searchResults.NavChild(event,9,1)" onkeypress="return searchResults.NavChild(event,9,1)" onkeyup="return searchResults.NavChild(event,9,1)" class="SRScope" href="../classStudent.html#a5caae1409a700602cc158dc005ff9749" target="_parent">Student::SetMotors()</a>
+    <a id="Item9_c1" onkeydown="return searchResults.NavChild(event,9,1)" onkeypress="return searchResults.NavChild(event,9,1)" onkeyup="return searchResults.NavChild(event,9,1)" class="SRScope" href="../classStudent.html#a760485de5b5a6de685bd9db6c443cfc2" target="_parent">Student::SetMotors()</a>
   </div>
- </div>
-</div>
-<div class="SRResult" id="SR_setup">
- <div class="SREntry">
-  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../classDummyTest.html#a905ab1ac36acec508b3d9e61d109d1b9" target="_parent">SetUp</a>
-  <span class="SRScope">DummyTest</span>
  </div>
 </div>
 <div class="SRResult" id="SR_setvalues">
  <div class="SREntry">
-  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setvalues')">SetValues</a>
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setvalues')">SetValues</a>
   <div class="SRChildren">
-    <a id="Item11_c0" onkeydown="return searchResults.NavChild(event,11,0)" onkeypress="return searchResults.NavChild(event,11,0)" onkeyup="return searchResults.NavChild(event,11,0)" class="SRScope" href="../classFeedbackSensor.html#ab75e30fbdd11cbb67c9f84757b0f6504" target="_parent">FeedbackSensor::SetValues()</a>
-    <a id="Item11_c1" onkeydown="return searchResults.NavChild(event,11,1)" onkeypress="return searchResults.NavChild(event,11,1)" onkeyup="return searchResults.NavChild(event,11,1)" class="SRScope" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">Sensor::SetValues()</a>
+    <a id="Item10_c0" onkeydown="return searchResults.NavChild(event,10,0)" onkeypress="return searchResults.NavChild(event,10,0)" onkeyup="return searchResults.NavChild(event,10,0)" class="SRScope" href="../classFeedbackSensor.html#ab75e30fbdd11cbb67c9f84757b0f6504" target="_parent">FeedbackSensor::SetValues()</a>
+    <a id="Item10_c1" onkeydown="return searchResults.NavChild(event,10,1)" onkeypress="return searchResults.NavChild(event,10,1)" onkeyup="return searchResults.NavChild(event,10,1)" class="SRScope" href="../classSensor.html#a15c12c5cf1ff7088c5524190ed355f29" target="_parent">Sensor::SetValues()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_standardqlearner">
  <div class="SREntry">
-  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="../classStandardQLearner.html#a724505db52ab190e329f4426be326b22" target="_parent">StandardQLearner</a>
+  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="../classStandardQLearner.html#a724505db52ab190e329f4426be326b22" target="_parent">StandardQLearner</a>
   <span class="SRScope">StandardQLearner</span>
  </div>
 </div>
 <div class="SRResult" id="SR_state">
  <div class="SREntry">
-  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_state')">State</a>
+  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_state')">State</a>
   <div class="SRChildren">
-    <a id="Item13_c0" onkeydown="return searchResults.NavChild(event,13,0)" onkeypress="return searchResults.NavChild(event,13,0)" onkeyup="return searchResults.NavChild(event,13,0)" class="SRScope" href="../classState.html#a1af59ce9dafd747e818c4767e9bd7ee6" target="_parent">State::State(const std::vector&lt; double &gt; &amp;state_descriptor, const double reward=0.)</a>
-    <a id="Item13_c1" onkeydown="return searchResults.NavChild(event,13,1)" onkeypress="return searchResults.NavChild(event,13,1)" onkeyup="return searchResults.NavChild(event,13,1)" class="SRScope" href="../classState.html#a50c1474e5b23bafd0300ba5a302c9474" target="_parent">State::State(State const &amp;s)</a>
-    <a id="Item13_c2" onkeydown="return searchResults.NavChild(event,13,2)" onkeypress="return searchResults.NavChild(event,13,2)" onkeyup="return searchResults.NavChild(event,13,2)" class="SRScope" href="../classState.html#ab91bb1dd5aa6260ab2a456581daf9ec2" target="_parent">State::State()</a>
+    <a id="Item12_c0" onkeydown="return searchResults.NavChild(event,12,0)" onkeypress="return searchResults.NavChild(event,12,0)" onkeyup="return searchResults.NavChild(event,12,0)" class="SRScope" href="../classState.html#a1af59ce9dafd747e818c4767e9bd7ee6" target="_parent">State::State(const std::vector&lt; double &gt; &amp;state_descriptor, const double reward=0.)</a>
+    <a id="Item12_c1" onkeydown="return searchResults.NavChild(event,12,1)" onkeypress="return searchResults.NavChild(event,12,1)" onkeyup="return searchResults.NavChild(event,12,1)" class="SRScope" href="../classState.html#a50c1474e5b23bafd0300ba5a302c9474" target="_parent">State::State(State const &amp;s)</a>
+    <a id="Item12_c2" onkeydown="return searchResults.NavChild(event,12,2)" onkeypress="return searchResults.NavChild(event,12,2)" onkeyup="return searchResults.NavChild(event,12,2)" class="SRScope" href="../classState.html#ab91bb1dd5aa6260ab2a456581daf9ec2" target="_parent">State::State()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_statehistorytuple">
  <div class="SREntry">
-  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_statehistorytuple')">StateHistoryTuple</a>
+  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_statehistorytuple')">StateHistoryTuple</a>
   <div class="SRChildren">
-    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classStateHistoryTuple.html#aecfc54358ab083e0c49e3322a1211459" target="_parent">StateHistoryTuple::StateHistoryTuple(State *const state, double timestamp)</a>
-    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classStateHistoryTuple.html#aab3103a676c689da3c610de5435de1d7" target="_parent">StateHistoryTuple::StateHistoryTuple(StateHistoryTuple const &amp;sht)</a>
+    <a id="Item13_c0" onkeydown="return searchResults.NavChild(event,13,0)" onkeypress="return searchResults.NavChild(event,13,0)" onkeyup="return searchResults.NavChild(event,13,0)" class="SRScope" href="../classStateHistoryTuple.html#aecfc54358ab083e0c49e3322a1211459" target="_parent">StateHistoryTuple::StateHistoryTuple(State *const state, double timestamp)</a>
+    <a id="Item13_c1" onkeydown="return searchResults.NavChild(event,13,1)" onkeypress="return searchResults.NavChild(event,13,1)" onkeyup="return searchResults.NavChild(event,13,1)" class="SRScope" href="../classStateHistoryTuple.html#aab3103a676c689da3c610de5435de1d7" target="_parent">StateHistoryTuple::StateHistoryTuple(StateHistoryTuple const &amp;sht)</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_stoplearning">
  <div class="SREntry">
-  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_stoplearning')">StopLearning</a>
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_stoplearning')">StopLearning</a>
   <div class="SRChildren">
-    <a id="Item15_c0" onkeydown="return searchResults.NavChild(event,15,0)" onkeypress="return searchResults.NavChild(event,15,0)" onkeyup="return searchResults.NavChild(event,15,0)" class="SRScope" href="../classDummy.html#aa36bcfa62e283c646d6f0e668f51980e" target="_parent">Dummy::StopLearning()</a>
-    <a id="Item15_c1" onkeydown="return searchResults.NavChild(event,15,1)" onkeypress="return searchResults.NavChild(event,15,1)" onkeyup="return searchResults.NavChild(event,15,1)" class="SRScope" href="../classStudent.html#a557d4a972d99d5bba31774c608b326f3" target="_parent">Student::StopLearning()</a>
+    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classDummy.html#aa36bcfa62e283c646d6f0e668f51980e" target="_parent">Dummy::StopLearning()</a>
+    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classStudent.html#a557d4a972d99d5bba31774c608b326f3" target="_parent">Student::StopLearning()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR_stopobserving">
+ <div class="SREntry">
+  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_stopobserving')">StopObserving</a>
+  <div class="SRChildren">
+    <a id="Item15_c0" onkeydown="return searchResults.NavChild(event,15,0)" onkeypress="return searchResults.NavChild(event,15,0)" onkeyup="return searchResults.NavChild(event,15,0)" class="SRScope" href="../classDummy.html#a6e1d5d66fe5b4ee367f2138ebf43a10f" target="_parent">Dummy::StopObserving()</a>
+    <a id="Item15_c1" onkeydown="return searchResults.NavChild(event,15,1)" onkeypress="return searchResults.NavChild(event,15,1)" onkeyup="return searchResults.NavChild(event,15,1)" class="SRScope" href="../classObserver.html#ab08434f37add05cd6691a80573758200" target="_parent">Observer::StopObserving()</a>
   </div>
  </div>
 </div>
