--- a/search/functions_74.html
+++ b/search/functions_74.html
@@ -7,10 +7,10 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
-<div class="SRResult" id="SR_teardown">
+<div class="SRResult" id="SR_test">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classDummyTest.html#a693e688f6ed8e5d80c3eb3491f50d48b" target="_parent">TearDown</a>
-  <span class="SRScope">DummyTest</span>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../Observation_2Observer_2DummyUnitTest_8cc.html#ab57833e596d127ddd3f83323048f47be" target="_parent">TEST</a>
+  <span class="SRScope">DummyUnitTest.cc</span>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
