--- a/search/functions_7e.html
+++ b/search/functions_7e.html
@@ -15,61 +15,76 @@
 </div>
 <div class="SRResult" id="SR__7edummy">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classDummy.html#a2f35db90431cd1da12b6bbf1d0aef53d" target="_parent">~Dummy</a>
-  <span class="SRScope">Dummy</span>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR__7edummy')">~Dummy</a>
+  <div class="SRChildren">
+    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classDummy.html#a2f35db90431cd1da12b6bbf1d0aef53d" target="_parent">Dummy::~Dummy()</a>
+    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classDummy.html#a2f35db90431cd1da12b6bbf1d0aef53d" target="_parent">Dummy::~Dummy()</a>
+  </div>
+ </div>
+</div>
+<div class="SRResult" id="SR__7edummyobservertest">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classDummyObserverTest.html#a6bafe76054ea474e68c0bd4801594435" target="_parent">~DummyObserverTest</a>
+  <span class="SRScope">DummyObserverTest</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7edummytest">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classDummyTest.html#aab7794e5d93aee8036e55198a4356af5" target="_parent">~DummyTest</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classDummyTest.html#aab7794e5d93aee8036e55198a4356af5" target="_parent">~DummyTest</a>
   <span class="SRScope">DummyTest</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eexplorationtype">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classExplorationType.html#a88a1e1492985e20379b34c7f8143c1f5" target="_parent">~ExplorationType</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classExplorationType.html#a88a1e1492985e20379b34c7f8143c1f5" target="_parent">~ExplorationType</a>
   <span class="SRScope">ExplorationType</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7efeedbacksensor">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classFeedbackSensor.html#a44f17379b62cd6d7ce8580ceee9df294" target="_parent">~FeedbackSensor</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classFeedbackSensor.html#a44f17379b62cd6d7ce8580ceee9df294" target="_parent">~FeedbackSensor</a>
   <span class="SRScope">FeedbackSensor</span>
+ </div>
+</div>
+<div class="SRResult" id="SR__7eobserver">
+ <div class="SREntry">
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classObserver.html#afcc6b67be6c386f2f3d2c363aa59cb47" target="_parent">~Observer</a>
+  <span class="SRScope">Observer</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eqlearner">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classQLearner.html#ab258e968d4d38e88472e85e87648a21f" target="_parent">~QLearner</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classQLearner.html#ab258e968d4d38e88472e85e87648a21f" target="_parent">~QLearner</a>
   <span class="SRScope">QLearner</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eqtable">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classQTable.html#ace14f566b9889061001c3cb4c7f1e128" target="_parent">~QTable</a>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classQTable.html#ace14f566b9889061001c3cb4c7f1e128" target="_parent">~QTable</a>
   <span class="SRScope">QTable</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7esensor">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classSensor.html#aa730e9961dd645e9df9644c52b6e72eb" target="_parent">~Sensor</a>
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classSensor.html#aa730e9961dd645e9df9644c52b6e72eb" target="_parent">~Sensor</a>
   <span class="SRScope">Sensor</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7estate">
  <div class="SREntry">
-  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classState.html#a9ddc1df6f998184d6477b48fab90281c" target="_parent">~State</a>
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../classState.html#a9ddc1df6f998184d6477b48fab90281c" target="_parent">~State</a>
   <span class="SRScope">State</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7estudent">
  <div class="SREntry">
-  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classStudent.html#a71f6d37e021e98dff29ffe67bfac6ce1" target="_parent">~Student</a>
+  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="../classStudent.html#a71f6d37e021e98dff29ffe67bfac6ce1" target="_parent">~Student</a>
   <span class="SRScope">Student</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eutilstest">
  <div class="SREntry">
-  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../classUtilsTest.html#a448cb6e9c759eb79c74d68c28424a98e" target="_parent">~UtilsTest</a>
+  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="../classUtilsTest.html#a448cb6e9c759eb79c74d68c28424a98e" target="_parent">~UtilsTest</a>
   <span class="SRScope">UtilsTest</span>
  </div>
 </div>
