--- a/search/classes_63.html
+++ b/search/classes_63.html
@@ -7,9 +7,15 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR_createsensor">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1CreateSensor.html" target="_parent">CreateSensor</a>
+  <span class="SRScope">Primitives</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_creditassignmenttype">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html" target="_parent">CreditAssignmentType</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html" target="_parent">CreditAssignmentType</a>
   <span class="SRScope">Primitives</span>
  </div>
 </div>
