--- a/Utils_8h.html
+++ b/Utils_8h.html
@@ -94,7 +94,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <code>#include &lt;cstdlib&gt;</code><br/>
 <code>#include &lt;cstring&gt;</code><br/>
 <code>#include &lt;string&gt;</code><br/>
-<code>#include &quot;Common/Primitive.pb.h&quot;</code><br/>
+<code>#include &quot;Proto/Primitive.pb.h&quot;</code><br/>
 </div>
 <p><a href="Utils_8h_source.html">Go to the source code of this file.</a></p>
 <table class="memberdecls">
