--- a/Utils_8h_source.html
+++ b/Utils_8h_source.html
@@ -93,7 +93,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <a name="l00019"></a>00019 <span class="preprocessor">#include &lt;cstring&gt;</span>
 <a name="l00020"></a>00020 <span class="preprocessor">#include &lt;string&gt;</span>
 <a name="l00021"></a>00021 
-<a name="l00022"></a>00022 <span class="preprocessor">#include &quot;Common/Primitive.pb.h&quot;</span>
+<a name="l00022"></a>00022 <span class="preprocessor">#include &quot;Proto/Primitive.pb.h&quot;</span>
 <a name="l00023"></a>00023 
 <a name="l00024"></a>00024 <span class="keyword">using</span> std::string;
 <a name="l00025"></a>00025 using ::google::protobuf::Message;
