--- a/search/all_63.html
+++ b/search/all_63.html
@@ -19,27 +19,55 @@
   <span class="SRScope">Utils.h</span>
  </div>
 </div>
+<div class="SRResult" id="SR_communicatewithcreate">
+ <div class="SREntry">
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../namespacePrimitives.html#a5a52b7aaf0739653a26d3adf8534f333" target="_parent">CommunicateWithCreate</a>
+  <span class="SRScope">Primitives</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_createsensor">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classPrimitives_1_1CreateSensor.html" target="_parent">CreateSensor</a>
+  <span class="SRScope">Primitives</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_createsensor">
+ <div class="SREntry">
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classPrimitives_1_1CreateSensor.html#a1a6f9cf9e7c4a370d99ed10a3f806676" target="_parent">CreateSensor</a>
+  <span class="SRScope">Primitives::CreateSensor</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_createsensor_2ecc">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../CreateSensor_8cc.html" target="_parent">CreateSensor.cc</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_createsensor_2eh">
+ <div class="SREntry">
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../CreateSensor_8h.html" target="_parent">CreateSensor.h</a>
+ </div>
+</div>
 <div class="SRResult" id="SR_credit_5fassignment_5ftype_5f">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classPrimitives_1_1QLearner.html#ac70de308cfd1ee4ac4d2b57567c13b8f" target="_parent">credit_assignment_type_</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classPrimitives_1_1QLearner.html#ac70de308cfd1ee4ac4d2b57567c13b8f" target="_parent">credit_assignment_type_</a>
   <span class="SRScope">Primitives::QLearner</span>
  </div>
 </div>
 <div class="SRResult" id="SR_creditassignmenttype">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#aa38b7485e51f594efc7d9f98e1374497" target="_parent">CreditAssignmentType</a>
-  <span class="SRScope">Primitives::CreditAssignmentType</span>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html" target="_parent">CreditAssignmentType</a>
+  <span class="SRScope">Primitives</span>
  </div>
 </div>
 <div class="SRResult" id="SR_creditassignmenttype">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html" target="_parent">CreditAssignmentType</a>
-  <span class="SRScope">Primitives</span>
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#aa38b7485e51f594efc7d9f98e1374497" target="_parent">CreditAssignmentType</a>
+  <span class="SRScope">Primitives::CreditAssignmentType</span>
  </div>
 </div>
 <div class="SRResult" id="SR_creditassignmenttype_2eh">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../CreditAssignmentType_8h.html" target="_parent">CreditAssignmentType.h</a>
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../CreditAssignmentType_8h.html" target="_parent">CreditAssignmentType.h</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
