--- a/search/files_63.html
+++ b/search/files_63.html
@@ -7,9 +7,19 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR_createsensor_2ecc">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../CreateSensor_8cc.html" target="_parent">CreateSensor.cc</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_createsensor_2eh">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../CreateSensor_8h.html" target="_parent">CreateSensor.h</a>
+ </div>
+</div>
 <div class="SRResult" id="SR_creditassignmenttype_2eh">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../CreditAssignmentType_8h.html" target="_parent">CreditAssignmentType.h</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../CreditAssignmentType_8h.html" target="_parent">CreditAssignmentType.h</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
