--- a/search/functions_63.html
+++ b/search/functions_63.html
@@ -7,9 +7,21 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR_communicatewithcreate">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../namespacePrimitives.html#a5a52b7aaf0739653a26d3adf8534f333" target="_parent">CommunicateWithCreate</a>
+  <span class="SRScope">Primitives</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_createsensor">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classPrimitives_1_1CreateSensor.html#a1a6f9cf9e7c4a370d99ed10a3f806676" target="_parent">CreateSensor</a>
+  <span class="SRScope">Primitives::CreateSensor</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_creditassignmenttype">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#aa38b7485e51f594efc7d9f98e1374497" target="_parent">CreditAssignmentType</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#aa38b7485e51f594efc7d9f98e1374497" target="_parent">CreditAssignmentType</a>
   <span class="SRScope">Primitives::CreditAssignmentType</span>
  </div>
 </div>
