--- a/search/functions_67.html
+++ b/search/functions_67.html
@@ -101,8 +101,9 @@
  <div class="SREntry">
   <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_getvalues')">GetValues</a>
   <div class="SRChildren">
-    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classPrimitives_1_1FeedbackSensor.html#ab53b3ef22c87f0fab72bae809286d4e9" target="_parent">Primitives::FeedbackSensor::GetValues()</a>
-    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classPrimitives_1_1Sensor.html#a182b50f66348971f0f2f17bafe571932" target="_parent">Primitives::Sensor::GetValues()</a>
+    <a id="Item14_c0" onkeydown="return searchResults.NavChild(event,14,0)" onkeypress="return searchResults.NavChild(event,14,0)" onkeyup="return searchResults.NavChild(event,14,0)" class="SRScope" href="../classPrimitives_1_1CreateSensor.html#aef0ddd3d5b33143b72f1f0d71338e195" target="_parent">Primitives::CreateSensor::GetValues()</a>
+    <a id="Item14_c1" onkeydown="return searchResults.NavChild(event,14,1)" onkeypress="return searchResults.NavChild(event,14,1)" onkeyup="return searchResults.NavChild(event,14,1)" class="SRScope" href="../classPrimitives_1_1FeedbackSensor.html#ab53b3ef22c87f0fab72bae809286d4e9" target="_parent">Primitives::FeedbackSensor::GetValues()</a>
+    <a id="Item14_c2" onkeydown="return searchResults.NavChild(event,14,2)" onkeypress="return searchResults.NavChild(event,14,2)" onkeyup="return searchResults.NavChild(event,14,2)" class="SRScope" href="../classPrimitives_1_1Sensor.html#a182b50f66348971f0f2f17bafe571932" target="_parent">Primitives::Sensor::GetValues()</a>
   </div>
  </div>
 </div>
