--- a/search/functions_6c.html
+++ b/search/functions_6c.html
@@ -20,8 +20,11 @@
 </div>
 <div class="SRResult" id="SR_listenonsocket">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classPrimitives_1_1FeedbackSensor.html#a467a44f0d72e9cc4290beba4ed33de60" target="_parent">ListenOnSocket</a>
-  <span class="SRScope">Primitives::FeedbackSensor</span>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_listenonsocket')">ListenOnSocket</a>
+  <div class="SRChildren">
+    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classPrimitives_1_1CreateSensor.html#a536c0514060e0befc66c47fc967211df" target="_parent">Primitives::CreateSensor::ListenOnSocket()</a>
+    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classPrimitives_1_1FeedbackSensor.html#a467a44f0d72e9cc4290beba4ed33de60" target="_parent">Primitives::FeedbackSensor::ListenOnSocket()</a>
+  </div>
  </div>
 </div>
 <div class="SRResult" id="SR_load">
