--- a/search/functions_70.html
+++ b/search/functions_70.html
@@ -20,8 +20,9 @@
  <div class="SREntry">
   <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_poll')">Poll</a>
   <div class="SRChildren">
-    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classPrimitives_1_1FeedbackSensor.html#a5c69b11e0ebe728de63e3f480f27c554" target="_parent">Primitives::FeedbackSensor::Poll()</a>
-    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classPrimitives_1_1Sensor.html#a0244a6fae6bc59f222ecc27268f76bde" target="_parent">Primitives::Sensor::Poll()</a>
+    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classPrimitives_1_1CreateSensor.html#a717937fcaea1193ef3802826a2f33e00" target="_parent">Primitives::CreateSensor::Poll()</a>
+    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classPrimitives_1_1FeedbackSensor.html#a5c69b11e0ebe728de63e3f480f27c554" target="_parent">Primitives::FeedbackSensor::Poll()</a>
+    <a id="Item1_c2" onkeydown="return searchResults.NavChild(event,1,2)" onkeypress="return searchResults.NavChild(event,1,2)" onkeyup="return searchResults.NavChild(event,1,2)" class="SRScope" href="../classPrimitives_1_1Sensor.html#a0244a6fae6bc59f222ecc27268f76bde" target="_parent">Primitives::Sensor::Poll()</a>
   </div>
  </div>
 </div>
