--- a/search/functions_73.html
+++ b/search/functions_73.html
@@ -90,8 +90,9 @@
  <div class="SREntry">
   <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_setvalues')">SetValues</a>
   <div class="SRChildren">
-    <a id="Item10_c0" onkeydown="return searchResults.NavChild(event,10,0)" onkeypress="return searchResults.NavChild(event,10,0)" onkeyup="return searchResults.NavChild(event,10,0)" class="SRScope" href="../classPrimitives_1_1FeedbackSensor.html#adacd130842ce8db13a49d92b04977579" target="_parent">Primitives::FeedbackSensor::SetValues()</a>
-    <a id="Item10_c1" onkeydown="return searchResults.NavChild(event,10,1)" onkeypress="return searchResults.NavChild(event,10,1)" onkeyup="return searchResults.NavChild(event,10,1)" class="SRScope" href="../classPrimitives_1_1Sensor.html#a21c7db423726d57b3e11477a069c5624" target="_parent">Primitives::Sensor::SetValues()</a>
+    <a id="Item10_c0" onkeydown="return searchResults.NavChild(event,10,0)" onkeypress="return searchResults.NavChild(event,10,0)" onkeyup="return searchResults.NavChild(event,10,0)" class="SRScope" href="../classPrimitives_1_1CreateSensor.html#a66f9931c7ddc17c0b72483be11788625" target="_parent">Primitives::CreateSensor::SetValues()</a>
+    <a id="Item10_c1" onkeydown="return searchResults.NavChild(event,10,1)" onkeypress="return searchResults.NavChild(event,10,1)" onkeyup="return searchResults.NavChild(event,10,1)" class="SRScope" href="../classPrimitives_1_1FeedbackSensor.html#adacd130842ce8db13a49d92b04977579" target="_parent">Primitives::FeedbackSensor::SetValues()</a>
+    <a id="Item10_c2" onkeydown="return searchResults.NavChild(event,10,2)" onkeypress="return searchResults.NavChild(event,10,2)" onkeyup="return searchResults.NavChild(event,10,2)" class="SRScope" href="../classPrimitives_1_1Sensor.html#a21c7db423726d57b3e11477a069c5624" target="_parent">Primitives::Sensor::SetValues()</a>
   </div>
  </div>
 </div>
