--- a/search/functions_7e.html
+++ b/search/functions_7e.html
@@ -7,84 +7,90 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR__7ecreatesensor">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1CreateSensor.html#acdc112cb80095f81f98580c879a807bf" target="_parent">~CreateSensor</a>
+  <span class="SRScope">Primitives::CreateSensor</span>
+ </div>
+</div>
 <div class="SRResult" id="SR__7ecreditassignmenttype">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#a024d4bba4c0c80e0d31b2548f7169cab" target="_parent">~CreditAssignmentType</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../classPrimitives_1_1CreditAssignmentType.html#a024d4bba4c0c80e0d31b2548f7169cab" target="_parent">~CreditAssignmentType</a>
   <span class="SRScope">Primitives::CreditAssignmentType</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7edummy">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR__7edummy')">~Dummy</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="javascript:searchResults.Toggle('SR__7edummy')">~Dummy</a>
   <div class="SRChildren">
-    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../classObservation_1_1Dummy.html#a2f5a4fa08eb850f94decb1823f1e59a7" target="_parent">Observation::Dummy::~Dummy()</a>
-    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../classPrimitives_1_1Dummy.html#a05113da640e4a4bf3a07f6e15c1d3c53" target="_parent">Primitives::Dummy::~Dummy()</a>
+    <a id="Item2_c0" onkeydown="return searchResults.NavChild(event,2,0)" onkeypress="return searchResults.NavChild(event,2,0)" onkeyup="return searchResults.NavChild(event,2,0)" class="SRScope" href="../classObservation_1_1Dummy.html#a2f5a4fa08eb850f94decb1823f1e59a7" target="_parent">Observation::Dummy::~Dummy()</a>
+    <a id="Item2_c1" onkeydown="return searchResults.NavChild(event,2,1)" onkeypress="return searchResults.NavChild(event,2,1)" onkeyup="return searchResults.NavChild(event,2,1)" class="SRScope" href="../classPrimitives_1_1Dummy.html#a05113da640e4a4bf3a07f6e15c1d3c53" target="_parent">Primitives::Dummy::~Dummy()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR__7edummyobservertest">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../classObservation_1_1DummyObserverTest.html#a551a92c8d0baf13f306b5eb04fc6654b" target="_parent">~DummyObserverTest</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classObservation_1_1DummyObserverTest.html#a551a92c8d0baf13f306b5eb04fc6654b" target="_parent">~DummyObserverTest</a>
   <span class="SRScope">Observation::DummyObserverTest</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7edummytest">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../classPrimitives_1_1DummyTest.html#aeb72b754828a235a043acbccd952521f" target="_parent">~DummyTest</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classPrimitives_1_1DummyTest.html#aeb72b754828a235a043acbccd952521f" target="_parent">~DummyTest</a>
   <span class="SRScope">Primitives::DummyTest</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eexplorationtype">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../classPrimitives_1_1ExplorationType.html#a403002bc5dc30a63d040786d1d80d686" target="_parent">~ExplorationType</a>
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classPrimitives_1_1ExplorationType.html#a403002bc5dc30a63d040786d1d80d686" target="_parent">~ExplorationType</a>
   <span class="SRScope">Primitives::ExplorationType</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7efeedbacksensor">
  <div class="SREntry">
-  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../classPrimitives_1_1FeedbackSensor.html#a09e4d28f7dc340b34eb0786f49e17884" target="_parent">~FeedbackSensor</a>
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classPrimitives_1_1FeedbackSensor.html#a09e4d28f7dc340b34eb0786f49e17884" target="_parent">~FeedbackSensor</a>
   <span class="SRScope">Primitives::FeedbackSensor</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eobserver">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../classObservation_1_1Observer.html#af9f2ef12fc97d366879b6b1fdf5d8795" target="_parent">~Observer</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classObservation_1_1Observer.html#af9f2ef12fc97d366879b6b1fdf5d8795" target="_parent">~Observer</a>
   <span class="SRScope">Observation::Observer</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eqlearner">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../classPrimitives_1_1QLearner.html#a7a12b5c09f3649d30c148215bb982d00" target="_parent">~QLearner</a>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classPrimitives_1_1QLearner.html#a7a12b5c09f3649d30c148215bb982d00" target="_parent">~QLearner</a>
   <span class="SRScope">Primitives::QLearner</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eqtable">
  <div class="SREntry">
-  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../classPrimitives_1_1QTable.html#a007367c2744dd94e98160c81744ca823" target="_parent">~QTable</a>
+  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classPrimitives_1_1QTable.html#a007367c2744dd94e98160c81744ca823" target="_parent">~QTable</a>
   <span class="SRScope">Primitives::QTable</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7esensor">
  <div class="SREntry">
-  <a id="Item9" onkeydown="return searchResults.Nav(event,9)" onkeypress="return searchResults.Nav(event,9)" onkeyup="return searchResults.Nav(event,9)" class="SRSymbol" href="../classPrimitives_1_1Sensor.html#ac88a8ef18f345e68d314b1121c6f2694" target="_parent">~Sensor</a>
+  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../classPrimitives_1_1Sensor.html#ac88a8ef18f345e68d314b1121c6f2694" target="_parent">~Sensor</a>
   <span class="SRScope">Primitives::Sensor</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7estate">
  <div class="SREntry">
-  <a id="Item10" onkeydown="return searchResults.Nav(event,10)" onkeypress="return searchResults.Nav(event,10)" onkeyup="return searchResults.Nav(event,10)" class="SRSymbol" href="../classPrimitives_1_1State.html#a5789a8b16ac4c062b24802ad7cc39c85" target="_parent">~State</a>
+  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="../classPrimitives_1_1State.html#a5789a8b16ac4c062b24802ad7cc39c85" target="_parent">~State</a>
   <span class="SRScope">Primitives::State</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7estudent">
  <div class="SREntry">
-  <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="../classPrimitives_1_1Student.html#a710cbc8bc2959acb1d01fcab97d3c27f" target="_parent">~Student</a>
+  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="../classPrimitives_1_1Student.html#a710cbc8bc2959acb1d01fcab97d3c27f" target="_parent">~Student</a>
   <span class="SRScope">Primitives::Student</span>
  </div>
 </div>
 <div class="SRResult" id="SR__7eutilstest">
  <div class="SREntry">
-  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="../classUtilsTest.html#a448cb6e9c759eb79c74d68c28424a98e" target="_parent">~UtilsTest</a>
+  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="../classUtilsTest.html#a448cb6e9c759eb79c74d68c28424a98e" target="_parent">~UtilsTest</a>
   <span class="SRScope">UtilsTest</span>
  </div>
 </div>
